new file:   gfx/event_news_pictures/SHX/SHX_feng.png 	new file:   gfx/event_news_pictures/SHX/SHX_feng_advisors.png 	new file:   gfx/event_news_pictures/SHX/SHX_feng_and_yan_2.png 	new file:   gfx/event_news_pictures/SHX/SHX_feng_nature.png 	new file:   gfx/event_news_pictures/SHX/SHX_guominjun_soldiers.png 	new file:   gfx/event_news_pictures/SHX/SHX_jing_yuexiu.png 	new file:   gfx/event_news_pictures/SHX/SHX_shanxi_provincal_bank.png 	new file:   gfx/event_news_pictures/SHX/SHX_taiyuan_panic.png 	new file:   gfx/event_news_pictures/SHX/SHX_yan_formal.png 	new file:   gfx/event_news_pictures/SHX/SHX_yan_speech.png 	new file:   gfx/event_news_pictures/SHX/SHX_yan_troops.png 	new file:   gfx/event_news_pictures/SHX/SHX_yanan_street.png 	new file:   gfx/event_news_pictures/SHX/SHX_zhengtai_railway.png 	new file:   gfx/interface/decisions/decisions_categories/Shanxi_province.png 	new file:   gfx/interface/decisions/decisions_categories_pictures/industry_KMT.png 	new file:   gfx/leaders/SHX/Portrait_SHX_Zhao_dai_wen.png 	new file:   gfx/leaders/SHX/Portrait_SHX_liang_huazhi.png 	new file:   gfx/leaders/SIK/bf9151e4b873b381c8d7b7ca4cdd0c93.png

--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1755,10 +1755,13 @@
  LEC_triad_national_populist:0 "使馆城市"
  LEC_triad_national_populist_ADJ:0 "使馆"
  LEC_triad_national_populist_DEF:0 "使馆城市"
- legcities.63.t:0 "我们的旗帜"
- legcities.63.d:0 "使馆城市该使用哪面旗帜？我们有两个选择，继续使用现在的，或者采纳一个新设计。我们该选择哪一个？"
- legcities.63.a:0 "保留现有旗帜"
- legcities.63.b:0 "接受新设计"
+ LEC_GREAT_WAY:0 "大道政府"
+ LEC_GREAT_WAY_ADJ:0 "中国"
+ LEC_GREAT_WAY_DEF:0 "上海市大道政府"
+ legcities.63.t:0 "“大道”之行？"
+ legcities.63.d:0 "在我们努力恢复上海街头稳定的同时，市民们也无不在担忧这座城市飘忽不定的未来。虽然徒有自治之表象日后怕是只会适得其反，但要求重设文官政府之呼声依旧是不绝于耳。这样的话，在一众不是罪囚就是军阀的合作者中，受过日本教育的大学教授、财政专家苏锡文显得格外突出。苏锡文好释道相合之“大道”，主张天下一家、万法归一。同其他合作者一样，苏锡文也是上海黑社会的常客，手下养着一批扒手和毒贩，还有着一贯道等宗教势力的支持。苏锡文承诺，上台后全力铲除城内的抵抗势力，并启动公共工程建设，为市民办实事。虽然许多人并不信苏锡文口中的这一套，但还是同意在我们的盟国能够再度整合上海市之前，暂由其进行管理。"
+ legcities.63.a:0 "组建“大道”政府"
+ legcities.63.b:0 "什么鬼东西，滚边去"
  legcities.99.t:0 "鸦片女王"
  legcities.99.d:0 "“一个年轻的妓女流落街头，在这个残酷的世界上苦苦挣扎，对身边生活不幸的人漠不关心”，这可能是对年轻时的江青最好的描述。然而现在的她却穿着奢侈的皮大衣，享受着上海上流人士才能体验的最优质美甲服务。这个罪恶之城的女王，充分的证明了只要你足够的坚定和残忍，你就无所不能…… ，资本主义成功的鲜活证据。而这一切都需要数以千计的贫苦农民迷上了衰败军阀们走私的毒品。\n\n在三合会的管控下，该地区鸦片交易几乎已经被垄断，取而代之的是大量的现金和尸体。而这一切都和江有着密不可分的关系。江青从夜女郎到东方的毒品皇后，的确是一个女强人的故事。\n\n上海导演费穆即将拍摄的电影《鸦片女王》的剧本的介绍……"
  legcities.99.a:0 "哈人！"
