--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -6,21 +6,22 @@
  SQI_syndicalist_party_long:0 "反日团结会(Fanri Tuanjiehui)\n§g这是个国民党山东支部的一个激进派系，他们在青岛已经潜伏数年，就为等一个起义时机。在泛太工会联盟出版的社会主义著作的影响之下，他们只可能在得到外来势力帮助的情况之下才能生存。§!"
  SQI_radical_socialist_party:0 "国民党"
  SQI_radical_socialist_party_long:0 "国民党(Kuomintang)\n§g自山东发起的新中华运动开始以来，许多人仍对上清内部进步与变革的潮流有着希望，他们与长江以南的国民党有着千丝万缕的地下联系。§!"
- SQI_social_democrat_party:0 "进步党"
- SQI_social_democrat_party_long:0 "进步党(Jinbudang)\n§g1916年由康有为成立的进步党很大程度上是靠着前爱国主义者的资助和前十年的机会主义发展起来的。当大清消弭了这种机会主义之时，进步党的一些山东党员选择转入地下。§!"
+ SQI_social_democrat_party:0 "中华工党"
+ SQI_social_democrat_party_long:0 "中华工党(Chinese Labour Party)\n§g中华工党原名中华民国工党成立于1912年后又多次解散重组，工党的成员成分很复杂，除工人外，还有资本家和山东省政府政客加入。他们主张实业救国，主张工人应当与资本家合作，对工人的一些经济斗争也表示支持。§!"
  SQI_social_liberal_party:0 "皈一道会"
  SQI_social_liberal_party_long:0 "皈一道会(Guiyidao Hui)\n§g这个组织和一贯道有着相似的背景，但是它还包括了基督教和西方神秘主义的一部分思想。由于山东政局的动荡，因此其资金来源大幅度减少，而那些寻求基督教的人也搬到了青岛。不过他们的确是享有为穷人提供福利的美誉。§!"
  SQI_market_liberal_party:0 "一心天道龙华会"
  SQI_market_liberal_party_long:0 "一心天道龙华会(Yixin Tiandao Longhua Hui)\n§g在邹平郊外建立的一心天道龙华圣教会，是那个年代能吸引一批绿林好汉的组织，它的建立者马士伟希望把几个都信仰先天道的团体集合起来共同改善山东的福利状况。只有在作为西方观察者和干涉者们对于一贯道潜在的军国主义以及皈一道的福利思想的替代品之时，它才被认为是一个政治团体。§!"
  SQI_social_conservative_party:0 "归仁会"
  SQI_social_conservative_party_long:0 "归仁会(Guiren Hui)\n§g百年以来屈辱的动荡只是山东悠久历史的一部分，许多山东人认为启蒙是摆脱屈辱的唯一途径，但另一些人在其短暂生命之中寻求主宰。杨树林的支持者反对上世纪西方所带来的一切变化，张宗昌搞得毒品交易为山东百姓所耻笑，更不必说张宗昌这人所展现的粗鄙和无耻。对很多山东百姓来说，大清之过不在于君主制，而在过度迁就张宗昌这个混蛋。因此，杨树林对大清的公开承诺得到了鲁东南地区的响应，他们希望重新回到在威海和青岛的故土。§!"
- SQI_authoritarian_democrat_party:0 "研究系"
- SQI_authoritarian_democrat_party_long:0 "研究系(Yanjiuxi)\n§g山东研究系是1916年进步党成立之后的一个分支，在大清复辟之后，他们一直为了山东的复兴而努力，研究系的成员不愿向山东的知识界妥协。而研究系本身也就靠着这些爱国人士的资助维持着，除此之外，他们还得到了西方来访人士的支持。§!"
- sqi_auth_dem_liu_heding_puppet:0 "刘派"
+ SQI_authoritarian_democrat_party:0 "张忠昌派"
+ SQI_authoritarian_democrat_party_long:0 "张忠昌派(Zhangzhongchang Pai)\n§g张忠昌所部在1925年前后进驻山东并长期割据于此，尽管他试图在第四次直奉战争中两不相帮来换取吴佩孚对其割据山东的许可。但直系要人靳云鹗的先斩后奏打破了这一切，张忠昌灰溜溜的被赶出了济南，部下也被靳云鹗收编，他不得不流亡青岛。但他从没有放弃自己的野心，在与张天然的会面后二人达成了协议，他们将为了推翻靳云鹗而合作。§!"
  SQI_paternal_autocrat_party:0 "靳云鹗派"
- SQI_paternal_autocrat_party_long:0 "靳云鹗派(Jin Yun'e Pai)\n§g作为山东人，靳云鹏、靳云鹗兄弟在山东有着广泛的影响力，再加上靳云鹗选择加入直系一事，因而尽管吴佩孚不相信他的忠诚，靳云鹗还是得以在北伐战争后取代张宗昌督理山东。§!"
+ SQI_paternal_autocrat_party_long:0 "靳云鹗派(Jin Yun'e Pai)\n§g1912年，靳云鹏的北洋第五师便驻扎在山东，此后他又担任了山东都督，靳云鹏、靳云鹗兄弟在山东有着广泛的影响力。在直奉倒皖战争后，靳云鹗选择投靠直系并在其中逐步攀升。但是靳云鹗始终没有得到吴佩孚的信任，这样的信任危机在第四次直奉战争后达到顶点，同为皖系投靠者的汤芗铭得以出镇湖南，而在战争中尽职尽责出力颇多的靳云鹗依旧没有固定驻地。在这样的情况下靳云鹗被吴佩孚派往山东，而随后靳云鹗便在山东发动了政变推翻了无能的张忠昌。§!"
  SQI_national_populist_party:0 "一贯道会"
  SQI_national_populist_party_long:0 "一贯道会(Yiguandao Hui)\n§g一贯道是19世纪在中华大地上蓬勃发展的白莲教支派之一，他们的信仰融合了儒家仙界的结构、佛教神灵的多样性和道教的生活方式。在世界大战时期，一贯道教义主要靠各地农村的小团体来传授，之后张天然还让大多数后来的皈依者分阶段研习教义。这确保了核心领导层有足够的筹码来调整一贯道的道义以适应他们的个人目标。现在一贯道的领头人是路中一的继任者张天然，通过其政治操纵，这个组织已经在全中国发展了七百多万名信徒，但山东本身只有五十万名成员。中国北方的各路农民军，特别是大刀会和红枪会，将一贯道视为中国最有道德的正统政府。他们向山东的缓慢迁移使得这一非暴力团体有了军事元素。需要注意的是，一贯道与其潜在的竞争对手皈一道之间仍有着较为亲密的关系。§!"
+
+ sqi_auth_dem_liu_heding_puppet:0 "刘派"
 
  SQI_chen_shu_fan: "陈树藩"
  POLITICS_chen_shu_fan_DESC:0 "§Y陆军将领介绍\n生于：§!§g1885年；大清帝国、陕西省安康市§!\n§Y军旅生涯：§!§g陈树藩祖籍湖南省长沙府宁乡县，高祖辈迁居陕西省兴安府安康县。1905年，他入陕西陆军小学，1906年他被保送入保定陆军速成学堂炮兵科学习。1911年，他加入中国同盟会。辛亥革命之际，1911年10月22日，他参加西安起义。此后他任陕西东路招讨使，驻同州，不久调任河东节度使。1915年12月袁世凯称帝，陈树藩被封为三等男。1916年1月护国战争爆发，调任陕北镇守使。5月，他的部下胡景翼活捉了陕西将军陆建章之子陆承武，即自任陕西护国军总司令，宣布陕西独立，以交还陆承武为条件，换取陆建章将将军（督军）之位交给他。6月6日，袁世凯病死，陈树藩于7日取消独立。1917年5月29日，安徽省长倪嗣冲反对总统黎元洪免除段祺瑞总理职务，宣告独立，陈树藩响应宣告，亦于30日通告脱离中央。1921年5月25日，北京政府宣布免去陈树藩职务，由直系将领第二十师师长阎相文出任陕西督军。陈树藩率部逃往汉中。1921年8月23日，阎相文在督署内突然吞服鸦片烟自杀，第十一师师长冯玉祥接任陕西督军。冯玉祥攻汉中府，陈树藩仓皇逃往四川。此后，陈树藩率军在陕西省、湖北省、四川省游荡，成为一个流浪的军事集团。同年12月，他被川军击败，他逃到天津。此后，他在津、沪、杭等地当寓公，一心研究佛教，脱离了军事、政治舞台。但这不代表他就此善罢甘休，当靳云鹏的电报发来之时，陈树藩立刻召集旧部下加入其中重建皖系。§!"
@@ -36,12 +37,11 @@
  SQI_chu_yupu: "褚玉璞"
  POLITICS_Chu_Yupu_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省汶上县§!\n§Y军旅生涯：§!§g褚玉璞出身破落地主之家，其父游手好闲，至于家道中落。他曾两次投考保定军校均未被录取，最终成为了横行地方的著名匪首，这样的结果并不出乎意料。\n\n褚玉璞因未能如愿步入军旅生涯而心灰意冷，遂怒而投奔绿林，纠集一众恶徒，以打家劫舍为生。相传，褚玉璞最初的匪徒班底来自一位土匪首领的队伍，有一年，他率领一批人救出了清朝官府关押在监狱的这位首领。到了1913年，褚玉璞匪帮被收编为张宗昌的麾下，自此，褚玉璞与张宗昌建起长期的良好合作关系。褚玉璞意外踏入军旅生涯，并在张宗昌的队伍里逐步晋升，他追随张宗昌投奔奉系军阀，跟随他们转战各地。后来张宗昌在山东的势力日益稳固，褚玉璞因为“功劳最大”，升任军长并主管军需。\n\n但也正因如此，在张宗昌被赶下台后，褚玉璞也同样遭到了打击，虽然新督理靳云鹗对他网开一面但是他在军中已毫无影响力§!"
  SQI_jin_yune: "靳云鹗"
- POLITIC_Jin_Yune_DESC:0 "靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。1918年，靳云鹗经由曹锟的保举升任旅长，由此转属直系。然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未获升迁。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗终于升为师长并被派往山东，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗获得了山东督理的职务，他在山东吸纳张宗昌旧部、皖系旧部积攒着自己的势力。他不会就这么乖乖的滞留在山东。"
- POLITICS_Jin_Yune_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省§!\n§Y军旅生涯：§!§g靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。1918年，靳云鹗经由曹锟的保举升任旅长，由此转属直系。然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未获升迁。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗终于升为师长并被派往山东，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗获得了山东督理的职务，他在山东吸纳张宗昌旧部、皖系旧部积攒着自己的势力。§!"
- POLITICS_SONG_ZHEYUAN_DESC:0 "宋哲元出生于19世纪末期，他在他的儒生叔叔那里启了蒙。1904年，宋哲元来到北京，师从陆建章。在十年后袁世凯掌权期间，宋哲元和陆建章产生裂隙。他很快加入了国民党，并且在击溃张勋之后将人马拉到了国民党那里。1925年宋哲元在与蒋介石会面时希望在解放山东之后能出任省长，然而1929年北伐最终以失败告终，而他也带兵与张宗昌交战。1930年宋哲元没了任何的支援，自己的合法性也岌岌可危，不过事情随着孔家的落难而出现了转机，孔家现在住在太庙，自身的地位与安全受到新崛起的传统宗教一贯道的威胁。1931年宋哲元带人把衍圣公救了出来，而在自己救了衍圣公一命之后，自身的合法性问题便迎刃而解了。宋哲元希望重建一个仁爱道德的和谐社会。"
- POLITICS_ZHANG_ZONGCHANG_DESC:0 "当1897年德国人强租青岛之时，张宗昌并没有啥民族主义情绪，不过辛亥革命爆发之后张宗昌的确开始整起了活儿。他跑到上海见了冯国璋，并在1917年直系军阀逐渐形成之后加入了他们。1920年直皖战争那会儿张宗昌把手底下的人都撤回了山东，这使得张宗昌有资本在1926年奉系与孙中山搞谈判的时候投靠张作霖。然而在奉系指望他的时候，他又把部队拉回了山东。然而这可并没有换来吴佩孚的网开一面，他仍然被赶下了台去，靳云鹗接管了他的一切。这导致张宗昌不得不和一贯道们合作以换取自己和靳云鹗谈判的资格。"
+ POLITIC_Jin_Yune_DESC:0 "靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。护国战争后，他投入皖系。而后又在皖系瓦解后转投直系加入吴佩孚的麾下，然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未被重用。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗终于升为师长并被派往山东，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗获得了山东督理的职务，他在山东吸纳张宗昌旧部、皖系旧部积攒着自己的势力。他不会就这么乖乖的滞留在山东。"
+ POLITICS_Jin_Yune_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省§!\n§Y军旅生涯：§!§g靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。护国战争后，他投入皖系。而后又在皖系瓦解后转投直系加入吴佩孚的麾下，然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未被重用。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗终于升为师长并被派往山东，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗获得了山东督理的职务，他在山东吸纳张宗昌旧部、皖系旧部积攒着自己的势力。§!"
  POLITICS_ZHANG_TIANRAN_DESC:0 "张天然在1918年见到一贯道祖师路中一之前一直处于无欲无求的状态。路中一一直希望让她妹路中节继承一贯道，还认为路中节是观音转世。1930年路中一去世之后，一贯道内部发生分裂，路中节带着她的信徒来到河南并在此定居，而张天然则和他老婆孙素贞一起，在信徒的支持之下开始宣传一贯道的教义。1922年张天然在泰山山顶建了一座神龛，并在日后完整的控制了泰山山顶。1924年一贯道已经完全控制了泰山，张天然和他的亲信也迁居至此。同年，张天然预言溥仪有被毒死的风险，于是他决定亲自去北京一趟。到了北京之后，溥仪和张天然交谈甚欢，张天然说自己和一贯道将会从慈善和军事两方面支持朝廷。1925年第一批红枪会来到了泰山，而近年来张天然最大成就莫过于与张宗昌的合作。"
  SQI_zhang_zongchang: "张宗昌"
+ POLITICS_ZHANG_ZONGCHANG_DESC:0 "当1897年德国人强租青岛之时，张宗昌并没有啥民族主义情绪，不过辛亥革命爆发之后张宗昌的确开始整起了活儿。他跑到上海见了冯国璋，并在1917年直系军阀逐渐形成之后加入了他们。1920年直皖战争那会儿张宗昌把手底下的人都撤回了山东，这使得张宗昌有资本在1926年奉系与孙中山搞谈判的时候投靠张作霖。然而在奉系指望他的时候，他又把部队拉回了山东。然而这可并没有换来吴佩孚的网开一面，他仍然被赶下了台去，靳云鹗接管了他的一切。这导致张宗昌不得不和一贯道们合作以换取自己和靳云鹗谈判的资格。"
  POLITICS_ZHANG_ZONGCHANG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1881年2月13日\n大清帝国，山东，掖县\n§Y军旅生涯：§L\n当1897年德国人强租青岛之时，张宗昌并没有啥民族主义情绪，不过辛亥革命爆发之后张宗昌的确开始整起了活儿。他跑到上海见了冯国璋，并在1917年直系军阀逐渐形成之后加入了他们。1920年直皖战争那会儿张宗昌把手底下的人都撤回了山东，这使得张宗昌有资本在1926年奉系与孙中山搞谈判的时候投靠张作霖。然而在奉系指望他的时候，他又把部队拉回了山东。然而这可并没有换来吴佩孚的网开一面，他仍然被赶下了台去，靳云鹗接管了他的一切。这导致张宗昌不得不和一贯道们合作以换取自己和靳云鹗谈判的资格。"
  SQI_li_jinglin: "李景林"
  POLITICS_LI_JINGLIN_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1885年\n大清帝国，直隶，枣强\n§Y军旅生涯：§L\n作为卷入游击战争的数百名年轻军官之一，李景林首次出现在公众视野还是1907年从保定北洋军校毕业时。他在1911年武昌起义首次参战。在民国期间，他靠着曲同丰的关系在各路军阀里混迹。在曲同丰因为腐败而被皖系军阀排挤出去之后，李景林也在1924年投靠了奉系军阀。之后张作霖把他派给了在河北打仗的张宗昌，一开始尽管张宗昌为人处世搞得一塌糊涂，但是李景林还是在一定程度上认同张宗昌的能力。不过1928年他来到山东之后，他见识到了张宗昌系的贪污腐败。尽管他自己贪过污，不过相比与张宗昌，他还是希望找一条干净的路子筹集军饷，这使得投入了至少更干净的靳云鹗系。"
@@ -480,7 +480,7 @@
  SQI_Stealing_Sailors_From_The_Legation_Cities_desc:0 "我们的舰队现在缺人，在这种情况之下，海战的胜败就取决于我们是否能在中立港招到足够的水兵，因此，为了解决这一问题，我们愿意在中国各大港口为我们的舰队征募大量的水兵。"
 
  shandong.1.t:0 "1936年：山东的转折点"
- shandong.1.d:0 "山东省最珍贵的部分已经被使馆城市和德国人所瓜分，曾在日德手中反复易手的青岛港，现在已成为德属东亚舰队的重要基地，经济上则被东亚监事会所控制。因此，济南成了山东的权力中心，1911年张宗昌作为革命军领袖来到山东，但很快便把吃喝嫖赌当成了主业，济南的发展就如同狗肉将军一样，肮脏、粗鄙，且千疮百孔。1927年国民党北伐战争的失败，并没有使得直系将手伸入山东，而是等到1928年的又一次直奉战争，虽然那场战争张宗昌并未加入其中。但是他仍然被未得到吴佩孚许可的靳云鹗赶下台去，辗转各地。虽然此后靳云鹗也曾试图挽救山东的经济，但是与北京政府基本决裂的现状导致他们几乎得不到资金支持，也因此他只能勉强维持山东的秩序，无法更进一步。而在泰山6600个石阶之上便是一贯道的总部，领袖张天然是个神秘有神圣的人，在得到失意军阀张宗昌的支持后他一直试图颠覆靳云鹗的统治。而到了1936年，山东人已经被贫困逼到了绝境，而拯救他们的地方要么是济南，要么是泰山。"
+ shandong.1.d:0 "山东省最珍贵的部分已经被使馆城市和德国人所瓜分，曾在日德手中反复易手的青岛港，现在已成为德属东亚舰队的重要基地，经济上则被东亚监事会所控制。因此，济南成了山东的权力中心，1925年张宗昌作为革命军领袖来到山东，但很快便把吃喝嫖赌当成了主业，济南的发展就如同狗肉将军一样，肮脏、粗鄙，且千疮百孔。1927年国民党北伐战争的失败，并没有使得直系将手伸入山东，而是等到1928年的又一次直奉战争，虽然那场战争张宗昌并未加入其中。但是他仍然被未得到吴佩孚许可的靳云鹗赶下台去，辗转各地。虽然此后靳云鹗也曾试图挽救山东的经济，但是与北京政府基本决裂的现状导致他们几乎得不到资金支持，也因此他只能勉强维持山东的秩序，无法更进一步。而在泰山6600个石阶之上便是一贯道的总部，领袖张天然是个神秘有神圣的人，在得到失意军阀张宗昌的支持后他一直试图颠覆靳云鹗的统治。而到了1936年，山东人已经被贫困逼到了绝境，而拯救他们的地方要么是济南，要么是泰山。"
  shandong.1.a:0 "爷不管，火车晚点了"
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
