--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -1782,10 +1782,10 @@
  yun_tanglarp.51.d:0 "施莉侠，也被叫做莉侠，登基为了新唐王朝的第二位皇帝——文献帝。文献帝曾在巴黎、阿尔及尔和柏林留学，养成了精益求精的学术精神与进步思想，她要在陈朽、弊病缠身的大唐官僚与贵族中掀起改革的滔天巨浪。文献帝因其行医经历而倍加关注医保改革，并且立志使这个专制的军阀帝国自由化，但却苦于如何去做。文献帝在柏林和阿尔及尔的自由主义与莱茵河谷和巴黎的社会主义之间举棋不定，一边是自由市场经济的人文资本主义之路，一边是福利国家与温和财政政策的社会民主之路，除此之外，还要应付死死守住毒品帝国不放手的守旧派的反抗。"
  yun_tanglarp.51.a:0 "倾向于阿尔及尔和柏林的激进自由主义"
  yun_tanglarp.51.b:0 "倾向于巴黎和莱茵的福利国家进步主义"
- yun_tanglarp.52.t:0 "纯唐血脉？"
- yun_tanglarp.52.d:0 "先皇之子唐绍骧和侄女施莉侠不顾先皇的极力反对，发展出了一段“地下”恋情，燃起了持续数年的爱恋之火。先皇愁于近亲相染，于是出手断绝了这段关系，把照顾了十几年施莉侠送去欧洲留学，让她忘记这幼稚的情爱。然而，爱情没有被距离隔断，先皇与世长辞的如今，禁断恋情之花再次绽放。这次，恋情得到了保皇派与保守派的支持，他们还催促尽快举行大婚，在他们看来，这正是确立正统的新唐王朝血脉、稳固新唐王朝地位的绝好时机。不过正如预先所想，反对的声音也一样强烈，其中多来自国民党中的旧日盟友。这一问题很棘手而且关乎着王朝的未来，必须做出决断。"
- yun_tanglarp.52.a:0 "维持纯正的唐朝血统，以此建立一个真正的王朝。允许皇室联姻！"
- yun_tanglarp.52.b:0 "服从唐继尧的遗愿。阻止婚姻，放逐通奸者"
+ yun_tanglarp.52.t:0 "正唐血脉？"
+ yun_tanglarp.52.d:0 "施莉侠宿于远房姨夫、先皇唐继尧之家，于春城昆明长成，与表兄唐绍骧青梅竹马，二人情愫天真无邪，然则唐家诸长辈及女眷，如先皇之姊妹，以其性情乖张、不事家务，且自视甚高，皆视莉侠非贤妻之选，故唐家上下，包括先帝在内，俱拒其亲事。未几，绍骧于求学期间迎娶广州商会会长、英国汇丰银行广州分行行长陈廉伯之妹为妻，莉侠闻此愤而出走，游学于日、英、德、法诸国，习文学、医药、诗歌，渐染新潮思想，待至先帝登基，方奉诏归国。\n\n昔日虽遭重重阻力，然今已世易时移，唐家内外见莉侠海外医药、文学之业有成，才德兼备，遂欲撮合旧情复燃，谓之新朝当保血统之纯正，更言此乃先帝之所愿，种种理由纷至而来，甚至以纳妾为议，欲图左右皇权。然绍骧夫妇琴瑟和谐，难有插足之处，莉侠虽旧情难忘，业已与诗人杨玉清情投意合，且屡次明志不复嫁娶。\n\n唐家之外，诸多保皇派与保守人士力挺唐施二人之姻缘，视之以立正唐血脉，巩固新朝。然反对之声亦盛，尤以国民党中先皇之旧盟友为甚，加之绍骧、莉侠本人亦不为所同。新君初立，此事如何处置，关乎我朝大计，实为唐家及诸大臣亟需定夺之难题。"
+ yun_tanglarp.52.a:0 "吾等必保新朝正统，强令成婚！"
+ yun_tanglarp.52.b:0 "应允莉侠与绍骧自主其情感之事"
  POLITICS_YUNNAN_ACTUAL_SON_DESC:0 "唐绍骧是先皇唐继尧的真龙皇子，也是其首任妻子亡故前诞下的孩子，许多人都把他看作大唐帝国以及其父皇开创的王朝的真正继承者，即使这似乎不是先皇的意愿。唐绍骧继位后以前唐第二位皇帝为样，称太宗，他既是名高傲的将官，也是名学者，还是名希望将中国经济现代化、斩除害死了其父的流毒的改革者，他将带领大唐步入崭新的全盛时代，将瘾君子先皇留给他的这个军阀王朝正统化、现代化。"
  POLITICS_YUNNAN_ACTUAL_NEICE_DESC:0 "先皇唐继尧的侄女、清朝武举之女施莉侠脱颖而出继承了仙逝之高祖的基业。生于1910年的她因爱上了唐继尧的儿子唐绍骧而遭受千夫所指，孤身一人被送出国学习如何在中国社会中做一个“得体”的女性。施莉侠在德国和法国学习医术学识，对强加于自己的期望感到深深的不公，于是在国外接受了自由主义，甚至带有些社会主义色彩的思想，虽谈不上激进，但她想为受毒品戕害的帝国带来些更加民粹与人道的改革。施莉侠取隋朝的文献皇后（即独孤伽罗，唐国公李渊，也就是后来的唐高祖的小姨）为号，称文献帝，这朵新开的花蕾将为其叔父建立的陈腐的大唐王朝带来现代化与自由化的改革。"
  YUN_axis_of_boss:0 "我们领导着老大轴心"
