--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -70,3 +70,18 @@
  Syndicalists: "§R工团党/共产党§!"
  geacps: "§j共荣圈§!"
  others: "§g其他主张§!"
+
+ tooltip_enable_hidden_tech: "启用$TECH|Y$\n$EFFECT$"
+
+ associated_governorate: "合作省"
+ autonomous_governorate: "自治省"
+ governorate: "系属省"
+ integrated_governorate: "整合省"
+ COUNTRY_associated_governorate: "$NONIDEOLOGY$"
+ COUNTRY_associated_governorate_DEF: "$NONIDEOLOGYDEF$"
+ COUNTRY_autonomous_governorate: "$NONIDEOLOGY$"
+ COUNTRY_autonomous_governorate_DEF: "$NONIDEOLOGYDEF$"
+ COUNTRY_governorate: "$NONIDEOLOGY$"
+ COUNTRY_governorate_DEF: "$NONIDEOLOGYDEF$"
+ COUNTRY_integrated_governorate: "$NONIDEOLOGY$"
+ COUNTRY_integrated_governorate_DEF: "$NONIDEOLOGYDEF$"
