modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -240,6 +240,9 @@
  shx.earlygame.10.d:0 "随着山西省内两派日益对立，关于背叛和谎言的小道消息四处鹊起。但最令人震惊的消息还当数井岳秀将军在家中被枪击身亡。井岳秀将军是陕西人，辛亥革命时曾担任革命军的指挥官。井岳秀早年是杨虎城的盟友，后来则选择与国民军结盟。刘镇华进攻西安城期间，井岳秀死守西安，这让他在国民军高层中声名鹊起。但对于社会主义分子，工会和农会的怀疑，以及北伐失败后的理想破灭，都让井岳秀与国民军之间产生了隔阂。甚至有谣传称他已经投靠了阎锡山。\n\n根据当地警察的初步调查，井岳秀的死完全是一场意外。然而问题在于，井岳秀是榆林地区的主要控制者之一，他在陕北的强大影响力意味着他对阎锡山和冯玉祥都产生了重大的威胁。在紧张的气氛中，他的葬礼将于今日举行，他的许多前部下也都将出席。人们普遍认为，这次的事件是一场..."
  shx.earlygame.10.a:0 "令人发指的暴行！"
  shx.earlygame.10.b:0 "悲惨的意外。"
+ shx.earlygame.11.t:0 "黑色星期一到来！"
+ shx.earlygame.11.d:0 "世界另一头传来的噩耗席卷了中国，甚至也波及了我们这样与世隔绝的省份！在黑色星期一的余波蔓延之时，上海证交所宣布关闭，而其他的交易所也纷纷效仿，导致中国的经济一落千丈。尽管山西政府已经努力将自己与中国其他地区的经济孤立，但许多与沿海地区有关联的产业仍然完全陷入崩溃。很不幸，这会影响我们的出口并让本不富裕的省份雪上加霜。许多人担心山西会重返那个黑暗的年代，那个饥荒横行，父母卖掉孩子的年代。\n\n太原已经出现了反租界和排外主义抗议，参与的许多是那些本就生活在挣扎中的学生，虽然有些在之前就找不到工作，但如今也找到了可以背黑锅的对象。山西的省银行在努力维护民众和商界的信心。尽管黑色星期一的损失在山西造成的损失不如在世界上其他地区那么严重，但这对于山西人民来说仍是一场彻头彻尾的灾难。"
+ shx.earlygame.11.a:0 "我们现在可不想要这个！"
 
  shx.mil.1.t:0 "邀请外国顾问"
  shx.mil.1.d:0 "众所周知，过去的一个世纪中，中国军队的素质都十分低下，大部分士兵在开战的那一刻就想着怎么借机逃跑。晋系军阀的武装力量比其他省份要好一些，但也没好到哪去。\n\n因此，许多[SHX.GetLeader]的顾问提议请外国顾问来训练山西的军队。山西作为一个内陆省份，自古就不太受外来地区影响，排外主义情绪也普遍盛行，不过并不激进。事实上，虽然当地仍盛行反帝国主义，但也肯定仍是愿意学习世界各国的先进作战方式的。\n\n我们已同德国顾问（曾训练过清军和八省联军）、俄罗斯顾问以及日本顾问接洽。虽然我们需要他们的军事援助和指导，但也必须警惕他们带来的潜在后果。毫无疑问，寻求德国人的帮助会在得到高质量训练的同时也打开我们的省界，并让我们受到更多的直系影响。而需求俄国或是日本人的顾问的帮助则有可能变相鼓励国民军那样的民族主义者。"
