modified:   common/ideas/Shanxi_ideas.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   events/Shanxi.txt 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -518,6 +518,8 @@
  SHX_dual_armies2_desc:0 "在北伐战争及华北混战的末期，阎锡山和冯玉祥都试图夺取该地区的控制权，但均以失败告终。在吴佩孚在德国人的援助下确立了对华北的支配，而张作霖在日本人的支持下于东北开疆拓土之后，阎冯二人被迫接受了这盘残局——他们都流落到了一个崎岖且闭塞的地方。\n\n虽然两军最初在指挥、供给和意识形态上有分歧，但最近几周双方达成了某种协议，即使他们仍然保留很大程度上的自主性。双方已经整合了彼此的高级指挥结构，军官之间也进行了一些交流。他们也强调对于[SHX.GetLeader]以及[SHX.GetName]的绝对忠诚。虽然双方传统仍不相同，下层官兵实际上也在为两支不同的军队效力，至少他们现在能够并肩作战了。不过，完全的整合仍需时日。"
  SHX_underdeveloped_mountain_economy:0 "落后的山区经济"
  SHX_underdeveloped_mountain_economy_desc:0 "多山、务农、贫穷的山西从多方面来看都与工业革命三竿子打不着——即便放在国内来比较也是如此。虽然身为中国最贫穷的省份之一，山西在阎锡山的领导下还是拥有了一段能够用于些许发展的和平时期。但是，省内经济仍然受省外的北京政府和省内可疑乡绅的高度影响。20世纪20年代，阎锡山曾竭力试图扭转贸易逆差并遏制恶性通胀，但如此多管齐下最多只是把农村建设弄成了半吊子工程。“模范省”的口号喊得震天响，但现实却不堪入目。很多人认为，“模范省”运动上马的大多数项目不过是用来粉饰“繁荣”以供外人消遣，而不是真心想改革。这观点是否正确就让我们拭目以待吧。"
+ SHX_underdeveloped_mountain_economy0:0 "山区经济崩溃"
+ SHX_underdeveloped_mountain_economy0_desc:0 "多山且以农业为主的山西历来贫困缠身，现在情况变糟了十倍——山西省经济在黑色星期一的冲击下急速下跌。虽然全球经济衰退对中国整体的实际影响不大，但还是以多种方式重创了山西本就脆弱的产业经济。其包括蜡匠、铜匠和典当铺在内的家庭作坊本就在漫长的十年计划中陷入多年停滞，现在更是处于崩溃边缘。山西规模有限的工业基地也初显颓势，纺织厂、火柴厂和省内唯一的蒸馏酒厂均出现亏损，据估计，十分之九的太原企业濒临破产。失业率飞速上涨，约三分之一的人口没了饭碗。学生们开始抗议，称自己唯一的出路便是“毕业后加入失业大军”，而进入济贫院的人数预计将翻倍。更糟的是，这次经济崩溃带来的绝望情绪令城市犯罪率抬头。需要赶快做些什么——出现一位铁腕领袖或者至少指出应做之事。"
  SHX_underdeveloped_mountain_economy1:0 "山区经济崩溃"
  SHX_underdeveloped_mountain_economy1_desc:0 "多山且以农业为主的山西历来贫困缠身，现在情况变糟了十倍——山西省经济在黑色星期一的冲击下急速下跌。虽然全球经济衰退对中国整体的实际影响不大，但还是以多种方式重创了山西本就脆弱的产业经济。其包括蜡匠、铜匠和典当铺在内的家庭作坊本就在漫长的十年计划中陷入多年停滞，现在更是处于崩溃边缘。山西规模有限的工业基地也初显颓势，纺织厂、火柴厂和省内唯一的蒸馏酒厂均出现亏损，据估计，十分之九的太原企业濒临破产。失业率飞速上涨，约三分之一的人口没了饭碗。学生们开始抗议，称自己唯一的出路便是“毕业后加入失业大军”，而进入济贫院的人数预计将翻倍。更糟的是，这次经济崩溃带来的绝望情绪令城市犯罪率抬头。需要赶快做些什么——出现一位铁腕领袖或者至少指出应做之事。"
  SHX_underdeveloped_mountain_economy2:0 "国家资本主义萌芽"
