modified:   common/characters/SHX characters.txt 	modified:   common/decisions/Shanxi_decisions.txt 	modified:   common/ideas/Shanxi_ideas.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   events/Shanxi.txt 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -142,6 +142,8 @@
  SHX_special_coup_circumstances_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。如果国民军错过机会，阎锡山将继续主导政局§!"
  SHX_purge_the_gmj:0 "清洗国民军"
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
+ SHX_agricultural_reform_mission_timer:0 "山西的土地改革进程"
+ SHX_agricultural_reform_mission_timer_desc:0 "山西正着手在全省推行大规模土地改革。政府在此过程中作出的决定可能会加快或减慢改革进程，但改革完成前，山西无法完成“土地制度改革”国策。"
 
  SHX_QIE_ties:0 "在北京的阴影下"
  SHX_QIE_ties_desc:0 "中央政府的阴影一直在我们的头上若隐若现，观察并等待着我们犯错。然而，他们在八省联合崩溃之前对其控制的耻辱性的大败展现了他们的虚弱，而且阎锡山明智地打开了平等协商的大门。\n\n从历史上来说，尽管是以孤立和低效为代价，我们让他们的影响力维持在一个最小值的努力是非常成功的。中央政府几乎完全包围着我们，紧紧扼住我们与外界的联系。与北京更加深入的合作提供了许多让本省现代化的可能性。然而，我们必须警惕他们在我们的经济中盎然恣意。毕竟，他们对单一的经济领域的干涉并不满意，并且会尝试伸手到维持我们政府执政的其他关键支柱。\n\n不要忘记我们救国的终极目标。§R请注意我们与北京之间的互动并不是单方面的，他们手里也有大量牌可以打。§!如果我们想要砍断北京对我们的枷锁，我们必须要狡猾。\n\n[QIE.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!\n\n\n[SHX_paying_with_inf_or_pp_defined_text]"
@@ -172,6 +174,11 @@
  SHX_christian_general:0 "基督将军"
  SHX_christian_general_desc:0 "冯玉祥的绰号来自于他的基督教信仰和他用基督教道德观激励手下士兵的行为。冯玉祥本人就是国民军精神的具现。虽然他对基督教的虔诚和他对教义的理解深度备受争议，却也从未动摇他的热忱。"
  SHX_model_governor_tt: "修正§Y阎锡山§!：\n$MODIFIER_COMMAND_POWER_GAIN_MULT$：§G+25%§!"
+ SHX_yan_land_reform: "§L山西寻求推行土地兼并规制§!"
+ SHX_feng_land_reform: "§L山西寻求进行土地再分配§!"
+ SHX_agricultural_reform_completed_flag: "§C山西的土地改革已经完成§!"
+ SHX_Yan_Favored_10_Year_tooltip: "这将遵循§P阎锡山的议程§!"
+ SHX_Feng_Favored_10_Year_tooltip: "这将遵循§g冯玉祥的议程§!"
  SHX_upgrade_guominjun_model_spirit_effect_tt: "§g我军将继续按照国民军模范发展。§!"
  SHX_upgrade_xiang_jun_model_spirit_effect_tt: "§P我军将继续按照晋绥军模范发展。§!"
  SHX_strengthen_yan_small_tooltip: "§P阎锡山§!的§Y权力§!§G小幅增长！§!"
@@ -202,6 +209,8 @@
  SHX_QIE_eco_invest_large_texticon_blocked: "[QIE.GetFlag] §R15%影响力§!"
  SHX_suiyuan_may_lead_to_war_tooltip: "§R请注意，该行动可能会导致战争§!"
  SHX_QIE_relief_for_shanxi_tooltip: "§C如果山西接受，他们会在从黑色星期一恢复的过程中收到援助，并且我们的影响力会有§Y中等程度§!的增长。§!"
+ SHX_reform_disrupted_by_war_tooltip: "§R战火肆虐严重扰乱了我们改革的进程，大大延长了所需的时间。§!"
+ SHX_Agriculture_Reform_Complete_Tooltip: "我们现在可以选取§Y“土地制度改革”§!并推进农业国策树"
 
  shx.0.t:0 "晋系军阀"
  shx.0.d:0 "山西，傲然挺立之省，大禹治水之地，其历史悠久而辉煌。自古以来，这片隐于群山之中的土地接受着历朝历代的统治，如今又被置于晋系军阀的管辖之下。虽名为晋系，该军阀却仅控制着山西西部以及陕西的部分地区。德高望重、老谋深算的阎锡山统领着这片土地，自辛亥革命时起便一直担任山西督理一职。他雄心勃勃、旨在实现山西现代化的方案，为其本人赢得了“模范督理”的美称。\n\n阎锡山曾是中国北方权力纷争的参与者，通过先后支持袁世凯、段祺瑞二人，他成功在日益险恶的政治环境下稳固了统治。然而，吴佩孚与曹锟带领的直系于1928年大获胜利，本已垂死的北洋政府得以苟延残喘。张作霖撤回关外，冯玉祥则带着国民军投奔阎锡山。为对抗日益强大的直系势力，两位旧敌被迫握手言和，接受清廷复辟以换取北京承认阎锡山的老师赵戴文的督理职位。在目睹北伐与第四次直奉战争的灾难之后，山西两大铁腕人物誓要东山再起，一雪旧仇，但是山西的土地只能有一位领袖。"
@@ -243,6 +252,43 @@
  shx.earlygame.11.t:0 "黑色星期一到来！"
  shx.earlygame.11.d:0 "世界另一头传来的噩耗席卷了中国，甚至也波及了我们这样与世隔绝的省份！在黑色星期一的余波蔓延之时，上海证交所宣布关闭，而其他的交易所也纷纷效仿，导致中国的经济一落千丈。尽管山西政府已经努力将自己与中国其他地区的经济孤立，但许多与沿海地区有关联的产业仍然完全陷入崩溃。很不幸，这会影响我们的出口并让本不富裕的省份雪上加霜。许多人担心山西会重返那个黑暗的年代，那个饥荒横行，父母卖掉孩子的年代。\n\n太原已经出现了反租界和排外主义抗议，参与的许多是那些本就生活在挣扎中的学生，虽然有些在之前就找不到工作，但如今也找到了可以背黑锅的对象。山西的省银行在努力维护民众和商界的信心。尽管黑色星期一的损失在山西造成的损失不如在世界上其他地区那么严重，但这对于山西人民来说仍是一场彻头彻尾的灾难。"
  shx.earlygame.11.a:0 "我们现在可不想要这个！"
+ shx.earlygame.12.t:0 "十年计划继续！"
+ shx.earlygame.12.d:0 "1930年对于冯玉祥和阎锡山二人来说都是重大的转折点。他们的军队在被不断打压与羞辱之后，士气持续陷入低迷，这也迫使二人不得不进行一些反思。吴佩孚当年背水一战、做困兽之斗却最终反败为胜，这绝不能草率地归结为他的军略十分高超或是德国人把手伸得太长——晋系军阀明白，直系掌握了铁路与通讯技术，并且拥有发达的基础工业设施，这两个条件决定了他们的部队可以在两地之间调动。\n\n老天不会给他们机会犯第二次相同的错误。冯玉祥和阎锡山在相当长一段时间里都如古代传统儒家教育培养出来的官吏一般，以农业为本，农民为根。虽然两人目前仍视农业为一个重要的生产部门（冯玉祥比阎锡山更甚），但毫无疑问山西需要自己的重工业基础来与北京或是沈阳这样的得到广泛外来资助的城市竞争。而在这个问题上，阎锡山比冯玉祥的想法要更加坚定——他对全面投资发展重工业的要求甚至让欧洲的极权主义者都感到震撼。山西在过去几年间为这个项目投入了大量的政治与经济资本（虽然其动力和成效都起伏不定）\n\n孙传芳统治的倒台至少目前来说放松了吴佩孚对中国的控制。然而，毫无疑问的是，西方对于现状的影响力正在逐渐减弱，而北京政府近十年的蛰伏意味着，如果吴佩孚最终幸免遇难甚至屹立不倒，那1936年前的日子对于山西来说将一去不返。因此山西必须发展自己的经济基础，从直系等势力手中巩固自己在北方的地位。\n\n此外，十年计划也促使阎锡山、冯玉祥，还有他们两人盟友之间的不断地激烈竞争。两人都试图用这项规模宏大、包罗万象的计划来巩固他们对省份的控制，并在山西民众间建立自己的政治、经济和社会影响力。毫无疑问，这项十年计划将决定山西乃至中国未来的成败。"
+ shx.earlygame.12.a:0 "十年计划的目标是什么呢？"
+ shx.earlygame.12.b:0 "十年计划的机制是怎样的？"
+ shx.earlygame.12.c:0 "我们必胜！（继续游戏）"
+ shx.earlygame.13.t:0 "十年计划的目标"
+ shx.earlygame.13.d:0 "十年计划有两个目标，一是实现山西的工业化；二是扭转山西与中国其他地区的贸易逆差。第一个目标已经实现了一部分，但是近十年来的围绕太原而振兴本地工业的努力正因腐败和战乱停滞不前。尽管有这些弊病存在，但是在这里获取工业革命的原材料与英国却大不相同——激增的人口、便宜易得的煤炭、一定规模的城市化和不到十年的政治稳定提供了优厚的基础条件。不过问题在于其他所有中国势力也几乎拥有这一优势，因此让第二个问题浮出了水面：贸易逆差。大量资金不断流出山西，流入了北京和德国商人的腰包。煤油、纺织品和烟草制品等外来产品涌入山西，打压了许多当地产业（就算山西奉行极强的保护主义），请经济萧条会促使发达国家的倾销进一步加速。甚至连山西本地种大烟的都被那些外面来的海洛因、吗啡贩子给打败了。\n\n为了继续实现上述两个终极目标，山西的经济规划者提出了三个短期目标：教育改革、农业改革与工商改革。阎锡山和冯玉祥对于如何实现这些目标有着各自的想法，当你浏览相关国策时，将会得到的更多的内容和新的信息。就算对山西进行总动员，其资源仍然十分紧张。而最稀缺的资源就是时间，因此山西必须对每个部门的投资规模尽快做出决定——不过三心二意的努力从来都无法在该省实现真正的变革。"
+ shx.earlygame.13.a:0 "告诉我这项计划的背景。"
+ shx.earlygame.14.t:0 "十年计划的机制"
+ shx.earlygame.14.d:0 "在玩法内容上，十年计划提供了山西早期游戏内容中的大部分内容（内政和军事国策树是剩下一部分）。十年计划的每项改革都是如下模式——完成一个国策将会出现新的决议，新决议将会提供一些背景介绍并允许你在两个方向中做出选择。同时还将启动一个决议倒计时，以反映山西在各项改革上取得的进展。国策树每个分支的“主要”部分都将提供一些围绕的附加国策，完成他们通常会提供一些加成，但更重要的是可以让你做出一些付更大代价来加快改革的抉择。这些国策并不是必须的，你也可以优先其他主要国策。但如果你想改革进度，就不得不选择他们，这样可以让山西更好地为未来的战争做好准备。另外请注意，在完成一个改革的重点分支后，许多加速改革的决议会立刻消失。\n\n该系统也与派系间的政治内容紧密相关。因为你选择的每个国策、决议或出现的事件都可能加强阎锡山或冯玉祥，并让他们最终大权在握，而决定权就在玩家手中。不过，在一段时间内维持两人的权力平衡可能更加有利——因为反对派会选择国策树分支另一侧的弱化版，提供一些加成。不过一旦一方彻底夺权，那么将不能再选择任何与其利益相左的国策（已经开始的不会被取消）。另外，当双方权力平衡尚未达到95%-100%时，双方发起对对方的清洗或是革命都会影响稳定性。\n\n北京的影响力是这个小游戏机制中的最后一个。北京如果有较高的影响力，则可以征用山西的民用工厂，但也会给山西提供强大的经济buff。对于早战玩家来说，最好避免北京的影响力过高。然而，那些寻求长期准备的玩家，可能北京带来的buff会很有用。鉴于直奉战争的不确定性以及山西本身资源的匮乏，时机的选择对于成功至关重要。"
+
+ shx.agri.1.t:0 "山西土改"
+ shx.agri.1.d:0 "山西的农业沿河分布，河流在山谷间留下了一层又一层的累积物。这个多山省份的土地质量不高，农业多集中在南部的汾河流域、中部的太原盆地还有北部的滹沱河流域与大同盆地。尽管大部分地区都难以实行佃农制，但在土地肥沃的区域，佃农制加剧了不平等，滋长了民怨，增强了乡绅们的统治。\n\n起初阎锡山大力支持投资农村，认为此举能够扭转山西对外的贸易逆差，而他熟读的儒家经典也往往充斥着重农思想。但他想从乡绅的手中收回一些对乡村的控制时，即便是他老家的人也不待见他了。乡绅们因为自身的利益反对改革，越来越多的佃农也在国民军到来之后隐约地支持国民军。\n\n过去对山西农业的改革得失参半，尽管目标远大，但自1934年以来，山西每年都要历经大旱。虽然十年计划主要侧重工业化，但一切工业化的基础都是一个稳定的土地政策。为此深思熟虑之后，晋系决定推出一项改革。"
+ shx.agri.1.yan:0 "温和土改。"
+ shx.agri.1.feng:0 "大规模土地再分配。"
+ shx.agri.2.t:0 "土地改革完成"
+ shx.agri.2.d.yan:0 "针对山西农村的贫困潦倒与分配不均终于取得了一些进步。在上下官员的不懈努力和同地主与佃户间的不断调和下，山西的农业终于展现出了一片欣欣向荣的景象。虽然乡绅们仍牢牢控制着乡村与土地，但县长却很好地起到了制衡的作用，打击了滥用诉讼恐吓平头百姓的行为，塑造了一派公正清明的景象。少许的土地被重新分配，造就了不少自耕农。\n\n山西的农民们利用山西有限的耕地不仅种植着五谷杂粮，还种植了一些经济作物，最多的就是棉花。小型农产品加工厂还有诸如此类的小作坊都鼓励农民种植经济作物，农业教育机构也在蒸蒸日上。总而言之，山西的农业如今一派蓬勃发展，欣欣向荣的景象，而激进主义也未能逼近分毫。"
+ shx.agri.2.d.feng:0 "针对山西农村的贫困潦倒与分配不均终于迎来了一场彻底的变革！佃农们不堪忍受乡绅的欺压，当局反感乡绅的冥顽不化，最终让晋系高层下定决心，履行长期未能实现的土地改革承诺。回想乡绅曾经反对土改的所作所为，[SHX.Capital.GetCapitalVictoryPointName]决定完全粉碎乡绅们的统治。大量的土地被重新分配，不公平的租金也被扫地出门，枪杆子在其中可发挥了不少作用。\n\n为此农村的局势如今就像个火药桶，地主老财们带着他们的私兵向中央政府寻求支持。但广大佃农被挑起的激烈情绪可不会放过他们，农民们抓住一切机会改变自己的地位，并向地主老财们展开了报复，但他们的举动对山西的基础设施和政治平衡都做出了一定的损害。除此之外还有很多问题等待解决，晋系当局能否控制这个他们自己释放的旋涡，而这场风波又要持续多久才能结束。"
+ shx.agri.2.default:0 "呃呃。很难想象你能在正常流程中看到这段文案，所以回报此问题。还有恭喜你完成土改了，大概。"
+ shx.agri.2.a:0 "土地归于人民！"
+ shx.agri.4.t:0 "三师传"
+ shx.agri.4.d:0 "在几十年前，有三个人投身教育行业。这三人都刚巧在辛亥革命前后就读于师范学校，却走上了不同的道路。其中最年长的一位叫连天祥，他毕业于日本农业大学。这位成功的酿酒师在杏花村经营“义泉泳”酒坊，并为自己的家乡赢得了国际殊荣。不久后，他得到了阎锡山的赏识，并成为了山西公立农业专门学校的校长。后来，连天祥又在山西农林学堂中任职，并一直担任山西的农业事务顾问。\n\n第二个人叫苏体仁，他在辛亥革命前毕业于山西省立师范学校，随后前往日本留学深造学习化学，于1916年归国并成为了一名中学校长。执掌学校期间，苏体仁的地位逐渐攀升，并与许多关心华北局势稳定的乡绅建立了紧密联系。苏体仁是由阎派知识分子组成的“智囊团”的领袖，担任了阎锡山的私人顾问并负责编辑阎锡山的公开著作。\n\n第三个人叫魏野畴，他于1917年入读北京高等师范学校，在辛亥革命的混乱余波中，魏野畴投身社会主义运动。这位社会主义运动的元老级人物现在在陕西担任中学教师。最近，他在西安领导学生和其他革命者举行反对军阀的示威运动，并在陕西的农协中担当重任。\n\n在这三人身上，各个试图争夺山西农业话语权的势力间的巨大鸿沟体现的淋漓尽致。而随着各方势力越来越关注山西的农村，人们围绕着这片土地的未来展开了激烈争论。"
+ shx.agri.4.a:0 "大河依旧，昼夜奔流。"
+ shx.agri.5.t:0 "乡绅抗议"
+ shx.agri.5.d:0 "乡绅们对我们最近为补救农村局势所做的努力不以为然。他们担心我们会用不值一文的债券来支付承诺的赔偿，低估他们的财产，把治权交给那些自视甚高的老农，因此绞尽脑汁地想方设法表达他们的不满。\n\n各地的乡贤开始抵制[Root.GetLeader]为宣布议程而举办的会议，甚至许多人拒绝减租。还有少数人不仅要求以硬通货对他们的财产进行“公平”补偿，而且要求缩减改革的规模。乡绅们毫不掩饰地表示，他们已经向中央政府求援，武汉的报纸指责我们搞社会主义，北京则正式敦促我们放弃计划。不管我们如何抉择，显然通向土改的道路不会一帆风顺。"
+ shx.agri.5.a:0 "撵走他们。"
+ shx.agri.5.b:0 "花钱打发他们。"
+ shx.agri.6.t:0 "大稻贼"
+ shx.agri.6.d:0 "作为山西反腐努力的一部分，山西人民政治监察协会将他们发现的贪腐证据公布于周刊《每周监察》之上。他们最近有了重大发现——在1923年时，阎督理为了防止再度爆发饥荒，下令要求各村村长从每家每户中收集粮食，并存放到地方寺庙中。这些寺庙本应由村中长老看管，但乡村视察委员会在巡视山西各地村时后发现了广泛的监守自盗。\n\n贪案矛头指向了不计其数的村长，部分人更与赵戴文家等政要的家族有所联系。赵戴文被指控不当使用人际网络，不仅私吞公款，还将寺庙据为己用。这是山西监察员的重大胜利，但有人提出我们应当小心行事。也许我们需要一场交易，以避免影响省府颜面或者出现任何牵涉我们政府的证据。这个烫手山芋落到了冯司直手中（他是由阎锡山亲自任命的资深忠诚派），他现在必须作出选择。"
+ shx.agri.6.a:0 "公开逮捕他们！"
+ shx.agri.6.b:0 "削减他们的资金！"
+ shx.agri.7.t:0 "公道之团"
+ shx.agri.7.intro:0 "主张公道团于1936年由阎锡山成立，旨在与国民军、牺盟会争夺农民的支持，并向那些他已经应付的焦头烂额的乡绅施加压力。这支脱胎于村监察委员会的“公道团”的总部设置于学校附近，由乡村教师领导，吸引了许多学生的踊跃加入。\n\n公道团雷厉风行，监控了将近5000位商人、士绅与官僚。尽管他们真成而热情，其效果却未必尽如人意。因为他们的上司会在他们追查那些有权有势的人时叫停他们，而当地的暴徒也经常袭击他们的总部，甚至很多农民也站在富人的那头反对他们。"
+ shx.agri.7.default:0 "$shx.agri.7.intro$\n\n也无可避免有一些骗子混入他们的行列，利用其中的职权来牟取私利。显然，公道团如今已经站在了十字路口之上——如果他们真的想超过国民军，就必须付出更多的努力，不过政府里有很多人认为他们已经达到了目的。"
+ shx.agri.7.feng:0 "$shx.agri.7.intro$\n\n然而，国民军的成员也想法设法加入了这个行列，并利用其现有的结构来作为推进土地改革的手段。不过即使在我们的队伍里，也有人呼吁在巩固对山西的控制之时应该保持克制。众所周知，社会主义强硬派和三教九流都在利用这个组织。虽然冯玉祥决定利用这个组织，但或许我们不该步子迈得太大..."
+ shx.agri.7.a:0 "我们必须大步向前！"
+ shx.agri.7.b:0 "让他们克制！"
 
  shx.mil.1.t:0 "邀请外国顾问"
  shx.mil.1.d:0 "众所周知，过去的一个世纪中，中国军队的素质都十分低下，大部分士兵在开战的那一刻就想着怎么借机逃跑。晋系军阀的武装力量比其他省份要好一些，但也没好到哪去。\n\n因此，许多[SHX.GetLeader]的顾问提议请外国顾问来训练山西的军队。山西作为一个内陆省份，自古就不太受外来地区影响，排外主义情绪也普遍盛行，不过并不激进。事实上，虽然当地仍盛行反帝国主义，但也肯定仍是愿意学习世界各国的先进作战方式的。\n\n我们已同德国顾问（曾训练过清军和八省联军）、俄罗斯顾问以及日本顾问接洽。虽然我们需要他们的军事援助和指导，但也必须警惕他们带来的潜在后果。毫无疑问，寻求德国人的帮助会在得到高质量训练的同时也打开我们的省界，并让我们受到更多的直系影响。而需求俄国或是日本人的顾问的帮助则有可能变相鼓励国民军那样的民族主义者。"
@@ -564,6 +610,8 @@
  SHX_agriculture_reform_desc:0 "山西省最显著的特征就是其等级分明且落后的农业——这是一个困扰着决策者长达数十年之久的问题（至少对那些对此保持足够关注的人来说是这样的）。由于山西多山的地形，可供耕种的土地十分有限。大部分肥沃的土地集中在邻近河流的山谷中的冲积平原。特别是晋中的太原盆地，这里是全省权力的中心，拥有相当不受欢迎的且具有剥削性的农奴制度，使得人民和牲畜都背负着沉重的负担。即使在农奴制度不那么常见且大多数农民拥有自耕土地的地区，连年的干旱、现代科技的缺乏、落后的水利、政府的腐败以及一贯的忽视也使人民积攒了长年累月的不满，这些最终有可能转化为革命的热潮。\n\n除了人力成本之外，山西的农业在许多方面都很原始，也无法促进整体经济的繁荣。尽管山西的农业收入还不如印度和菲律宾这些地方，山西每年还是加派了大量开支以进口食物，从而加剧了其贸易赤字。超过半数（将近四分之三）的人们生活在赤贫之中，而政治舞台则由那些冷酷无情的乡绅把持。山西的农场和工厂所产生的资源很少被重新投入到经济中，它们往往被浪费在婚礼等无谓的开支上，而山西的生产力甚至越来越落后于中国的其他贫困地区。山西省政府之前为改善该地区状况所做的努力基本上都不成功，而即使是现在在实施中的“十年计划”在很大程度上也忽视了农民。当农民们在烈日下辛勤劳作时，他们的失望有可能转化为愤怒，而愤怒又有可能转化为行动。显然，我们必须采取行动——越早越好。"
  SHX_agriculture_reform1:0 "承诺土地改革"
  SHX_agriculture_reform1_desc:0 "近二十年前辛亥革命爆发之时，许多人希望农村的境况能得以转变。阎锡山与其他的革命党人掌控山西，并在振兴山西的过程中大力发展农业经济。然而，十多年过去了，山西的发展却乏善可陈。即使山西省当局承诺像投资工业一样投资农业，承诺对农民进行现代技术教育，承诺改善人民的生活条件，但人民听到的也只是空话。对普通农民来说，改革的尝试仅仅意味着更高的税收，以及士绅和国家之间在农业盈余分配问题上的进一步内讧，只有涓涓细流才会落到劳累过度、不堪重负的老百性身上。他们感到失望并不奇怪——诉讼仍然是富人压制穷人的有力工具，政府在农村事务中经常退让于士绅的要求，甚至名义上独立的农民也很容易成为放高利贷的富人的猎物。\n\n山西省领导层对该省的未来高谈阔论，但要想取得显著成绩不能光靠空谈。最初的“十年计划”在很大程度上忽视了山西农业的需求，而偏重于重工业化，但山西显然需要尽快解决农村的问题。"
+ SHX_agriculture_reform1:0 "承诺土地改革"
+ SHX_agriculture_reform1_desc:0 "近二十年前辛亥革命爆发之时，许多人希望农村的境况能得以转变。阎锡山与其他的革命党人掌控山西，并在振兴山西的过程中大力发展农业经济。然而，十多年过去了，山西的发展却乏善可陈。即使山西省当局承诺像投资工业一样投资农业，承诺对农民进行现代技术教育，承诺改善人民的生活条件，但人民听到的也只是空话。对普通农民来说，改革的尝试仅仅意味着更高的税收，以及士绅和国家之间在农业盈余分配问题上的进一步内讧，只有涓涓细流才会落到劳累过度、不堪重负的老百性身上。他们感到失望并不奇怪——诉讼仍然是富人压制穷人的有力工具，政府在农村事务中经常退让于士绅的要求，甚至名义上独立的农民也很容易成为放高利贷的富人的猎物。\n\n山西省领导层对该省的未来高谈阔论，但要想取得显著成绩不能光靠空谈。最初的“十年计划”在很大程度上忽视了山西农业的需求，而偏重于重工业化，但山西显然需要尽快解决农村的问题。"
  SHX_agriculture_reform_Yan:0 "徒有其名的土地改革"
  SHX_agriculture_reform_Yan_desc:0 "山西的掌权者已决定推行一项温和的土地改革方案，这囊括一系列政策，以约束农业精英的行为，同时也购买并重新分配一些土地给耕种者。这项工作并非一帆风顺，因为山西传统的士绅掮客们采取了保守的立场，他们威胁要阻挠改革的开展。许多人怀疑改革进程被社会主义者或权力欲极强的督理所劫持，他试图以牺牲他人利益为代价来扩大自己的影响力，尽管他试图向他们保证这是避免大规模骚乱的唯一途径。尤其值得注意的是所谓的“公道团”的出现，这个组织是由以前的村务监查委员会领导人组建的，目的是解决农村腐败问题，进一步落实十年规划。他们虽然诚心，但也由于山西试图在革命和反动之间保持中立而受到阻碍，不过他们也使得农村变得更加公平。"
  SHX_agriculture_reform_Feng:0 "有限土地再分配"
@@ -604,6 +652,12 @@
  SHX_japanese_aid_desc:0 "自从俄国人在1904年被打败后，没有人可以质疑明治维新成功的现代化成果，这些成果让日本在国际舞台上平步青云。日本在中国的形象毁誉参半，不少人视他们为侵犯我们主权的帝国主义威胁，而其他人则认为日本的现代化方式值得中国仿效。我们应该联系日本人，请求他们协助发展我们的武装力量，但此举可能会触怒民族主义者。"
  SHX_german_aid:0 "德国顾问"
  SHX_german_aid_desc:0 "举世无双的德国军队曾在欧战中击败其他列强。虽然德国人在中国所扮演的角色备受争议，在民族主义者眼中，他们协助清帝复辟，是帮卑鄙无耻的帝国主义者，而其他人则视中德合作为抵抗日本的潜在后盾。但不论如何，我们都应该接触德国人并学习他们的普鲁士军事传承，这样我们就可以成为中国的普鲁士了。"
+ SHX_Ten_Year_Plan_begins:0 "重振十年计划"
+ SHX_Ten_Year_Plan_begins_desc:0 "山西的变革即将来临，老百姓虽然不知道也不关心山西强人之间的政治把戏，但就算是他们也能察觉到。村长们晚上不赌博而在工作，活动家和宣传员频频四处宣传，太原来的县长们十分关切统计数字的真实性。甚至连外部人士也注意到了这一点——来自北京的投资者和境外的观察人士都注意到山西的动态，进行了大张旗鼓的访问。虽然山西自1936年以来一直在进行十年计划，但最近却有了新的紧迫感。这次变革真的来了，即使目前还不清楚会对谁有利，即使需要巨大的牺牲，但人们总是谨慎地怀揣着希望。"
+ SHX_Ten_Year_Plan_disrupted:0 "十年计划中断"
+ SHX_Ten_Year_Plan_disrupted_desc:0 "天下没有不散的筵席，重启十年计划为我们带来了短暂易逝的繁荣。得益于孤立带来的和平，山西得以远离军阀冲突并与直系治下的中原地区开展稳定贸易。然而山西现已再次陷入战火，也许是由于统治者的野心，或是与我们自身无关的原因，但战争意味着人力被征召，资金被耗尽，基础设施被毁坏，这将不可避免地打乱所有项目。如今，十年计划只不过是对本可实现的美好未来的痛苦回忆罢了。"
+ SHX_paying_off_gentry:0 "回报乡绅"
+ SHX_paying_off_gentry_desc:0 "迫于压力，士绅同意放弃他们的一些要求。然而，他们开出的代价也不菲。他们要求获得相当大一部分的收成，更不用说他们还要预付硬通货，以停止他们反对近期土地改革措施的活动。为了避免进一步受到阻挠，我们必须与他们进行合作。不过，这也确实表明了地主精英们在多大程度上继续保持着对该省的控制。"
 
  SHX_Yan_Xishan_Schools:0 "在学校教授阎锡山思想"
  SHX_Discredit_Fengs_Religion:0 "发展阎锡山思想"
