--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -142,8 +142,40 @@
  SHX_special_coup_circumstances_tooltip:0 "§R除非遭受外敌入侵或者其他特殊情况，否则山西的权力斗争将总是以清洗或革命结束。如果国民军错过机会，阎锡山将继续主导政局§!"
  SHX_purge_the_gmj:0 "清洗国民军"
  SHX_purge_the_gmj_desc:0 "自从冯玉祥与阎锡山闹掰后，旧有的阎冯二元体制就开始摇摇欲坠。据报道，国民军已经驻扎在了陕西，以及虽然两人仍持续就省政事务进行沟通，但所有人都能看见冲突之兆。阎锡山的官僚机构异常活跃，他们正孜孜不倦地解决问题，并为他们的山西主子大肆宣传。很明显，冯玉祥的赌博开始失败了——他正在失去对陕西的控制，农民开始反对他。阎锡山和其效忠派的一次决定性打击将彻底消除国民军的威胁！"
+ SHX_feng_taking_SHX_peasant_deal: "发动农民"
+ SHX_feng_taking_SHX_control_peasants: "剪除乡绅"
+ SHX_feng_taking_SHX_unfair_rent: "终结不公地租"
+ SHX_feng_taking_SHX_building_villages: "组建农民合作社"
+ SHX_yan_taking_SHX_gentry_deal: "对乡绅妥协"
+ SHX_yan_taking_empower_magistrates: "有限国有化"
+ SHX_yan_taking_SHX_control_gentry: "支配乡村"
+ SHX_yan_taking_SHX_litigation: "息讼会"
  SHX_agricultural_reform_mission_timer:0 "山西的土地改革进程"
  SHX_agricultural_reform_mission_timer_desc:0 "山西正着手在全省推行大规模土地改革。政府在此过程中作出的决定可能会加快或减慢改革进程，但改革完成前，山西无法完成“土地制度改革”国策。"
+ SHX_increase_taxes:0 "助农强国"
+ SHX_increase_taxes_desc:0 "如果我们要为本省的必要改革提供资金，那么就必须获得更多农业盈余。我们将利用新口号发起一场运动，鼓励人们为我省的努力作更多贡献，尤其是让豪绅拿出他们的不义之财。典当行和其他形式的高利贷将被课以重税，土地税制也将改革，在征税时先富后贫。他们可能不喜欢这样，但这样总比爆发全面革命好！"
+ SHX_maintain_countryside:0 "在乡村保持均衡"
+ SHX_maintain_countryside_desc:0 "山西的农村脆弱无比，农民之间酝酿着各种新仇旧恨。因此，唯一合适的出路就是建立一个公正的制度。\n\n首先，我们必须降低村级和县级政府的应缴税——两者都是地税的三倍，而且无论如何，村级政府和财政系统通常都是豪绅的囊中之物。有人甚至说，乡绅们会故意雇佣流氓袭击其他城镇，以雇佣地方防卫力量为名，为加税寻找借口。\n\n我们将要求政府每年编制预算，并实施定期审计，这将有助于减轻农民的部分负担。此外，进一步加强治安和政府力量投射亦将有助于确保安全和秩序，防止农村叛乱。\n\n与延安的激进社会主义者不同，我们将会适当地补偿地主。受到黑色星期一影响，山西全省的土地价值下降了近80%，我们将向地主提供无息债券，以满足他们的中间需求——其价值比实际价值高出50%。\n\n虽然这可能会引起激进派和反动派的不满，但正是这种谨慎的平衡行为将确保我省的安全和生产力。"
+ SHX_litigation:0 "息讼会"
+ SHX_litigation_desc:0 "士绅经常滥用职权，其中最常见的就是他们会利用优势资源拖延法庭的审判，使得贫困的诉讼人无力偿付律师的费用。正是这种行为严重损害了农民对政府以及传统司法手段的信任，而且如果我们要保持人民对我们的支持，我们就必须终止这种行为。我们之前采取的手段之一是将诉讼权限从地方官员转移到正式法庭上，但这也有其缺陷——人们指责法官称其更倾向于展示其在抽象推理方面的技巧，而非实际地主持正义。我们应当继续拓展之前的事业，在每座乡村成立一个六名委员组成的“预防诉讼委员会”，其成员由村民自己选举产生。这些委员会将尝试在上报到法庭或县长之前，对任何争端或纠纷进行仲裁。他们已经在20世纪20年代取得了一些成效，现在正是在全省推广的最好时机。"
+ SHX_limited_nationalisation:0 "有限国有化"
+ SHX_limited_nationalisation_desc:0 "我们已经实施了数十个计划，以期能动员老百姓加入我们的事业中来，现在就是我们开始为将山西的可耕土地置于我们的控制之下而做出实际工作的时候。\n\n在培训中心和行政学院的教育与灌输下，一支新的县长队伍将被授予前所未有的对村庄的权力。这批新县长们的权力包括统领村长、罢免不受欢迎的村官以及定期向太原报告，而且为了减少他们对当地人建议的依赖，他们的轮换的频率会有所降低。\n\n同样地，山西经济与社会统计调查促进会也协助我们每年印发数百页的统计数据，内容涵盖山西生活的方方面面。这使得我们的县长们得以对经营不善的土地进行有针对性的国有化运动，同时避免因在政治上引起更大反应而付出极大的代价。"
+ SHX_intimidate_landlords:0 "震慑地主"
+ SHX_intimidate_landlords_desc:0 "为了“应对”我们改善山西土地状况的努力，许多士绅都在利用各种卑鄙手段阻挠我们。当中包括抗议，或者无视我们的法律、贿赂行政官员，甚至雇佣流氓袭击县长。现在该到我们无视法律了——我们将把民兵和煽动者部署到村落之中，以显示力量，并赶出顽固不化的不忠地主。这项政策无疑会带来一些麻烦，但重要的是，我们要表明我们准备好进行真正的变革，我们真正站在普通百姓的立场上！"
+ SHX_unfair_rent:0 "终结不公地租"
+ SHX_unfair_rent_desc:0 "山西经济体系中一个符合多数情况的显著特征是，少数拥有财富并能接受教育的人剥削着大多数人，而且他们也有能力无视周围的苦难。其中尤以地租为甚，佃农承受着高昂的费用和利息——其体制实质上是封建主义的。这一问题集中太原附近的晋中地区，因为省内大部分农民完全拥有自耕地，或至少是半独立的。然而这并不能使那些生活在人口拥挤地区的不幸人们获得什么安慰，经济的停滞使得他们必须为了不断减少的回报而彼此竞争。制止这一现象是一件优先事项——政府将对耕地实施一系列租金管制，使其被限制在10%左右（之前曾超过66%），从而能让耕种者得以保留他们种植的大部分土地。"
+ SHX_peasant_cooperatives:0 "组建农民合作社"
+ SHX_peasant_cooperatives_desc:0 "哪怕在山西省内，农民合作社的概念也并不新鲜，在“十年规划”内，我们也推动了许多其他行业成立合作社。然而，对农业而言，在许多情况下，这是划分土地的唯一可行方法，因为平均分配往往会造成土地太小，无法养活一家人。\n\n同时，这样做也能良好地考虑人口的变化，方便政府监督管理，这将极大地帮助我们重塑农村，并为进一步种植腾出更多空间。这项政策势必会招致“我们在搞社会主义”的指责，让许多以前持观望态度的士绅转而反对政府，但此举也会受到平民的欢迎！"
+ SHX_land_to_villages:0 "一切土地归农村"
+ SHX_land_to_villages_desc:0 "在20世纪20年代，阎督理曾设想将所有的土地征缴归政府所有，然后由政府在耕种者之间进行更加平等的分配。这一想法在十年计划开始之处得以复兴，一部分原因是国民军的到来。\n\n虽然当时将山西周围的所有农田收归国有并重新分配的做法引起了广泛关注，但还是因为收效甚微而黯然退场了。现在是时候改变这种情况了，我们开始重新从士绅手中购买土地，并以更加公平的安排分配给农民。在遭到反抗的地方，我们将采取军事行动以扫荡土地，并从反抗的士绅手中剥夺大规模的在外地主地产。\n\n只有这样我们才能对农村产生深远影响，从而使山西从落后制度的束缚中解脱出来。"
+ SHX_cheap_credit:0 "廉价信贷与化肥"
+ SHX_cheap_credit_desc:0 "务农相当艰苦，农民往往被迫在一年之初举债购买化肥等必要现代化设备，并寄望于年底的收成足以抵债。因此，农民很容易陷入长期债务之中，在连年欠收之时尤其如此，就像山西目前这样。\n\n土地开垦银行必须获得更多资金，以低利率贷款帮助减轻农民负担。他们还将获准出售农作物保险，使农业成为一项农民得到的保障比过去数十年更多的行业。这将使得农民不必求助于乡绅们制定的苛刻利率，这种利率往往接近（如非赤裸裸的）高利贷。\n\n同样，我们也必须建立化肥厂，并对生产化肥进行补贴。这将有助于降低我们农民的生产成本，并有望在未来提高产量。"
+ SHX_water_control:0 "治水造林"
+ SHX_water_control_desc:0 "治水在山西的历史悠久，治水也是阎锡山早期施政的改革重心之一。山西的降雨量历来极不均匀，且多集中在夏季，山西省政府因此成立了水利局，由训练有素的技术官僚负责修建灌溉渠，并向农民出租机械挖掘水库。与此同时，半官方的植树造林促进会将负责种植树苗，以防止水土流失和山洪爆发。这些努力……虽然在理论上令人印象深刻，但在实践时往往事与愿违。许多农民都租不起水利局提供的机械，而且由于山西依靠土坝灌溉，土坝每年都会垮塌，因此河水灌溉工作经常出现缺口。树木往往无人维护，除了那些种在公路上的树木——其意在炫耀而非实用。\n\n要建设现代化的山西，我们就必须投资建设带有止回阀功能的现代化砌石大坝，并聘请一批接受过培训的外国（昂贵）技术人员来维护水资源，以启动我们的水利新计划。"
+ SHX_upgrade_telecommunications:0 "扩展电子通信"
+ SHX_upgrade_telecommunications_desc:0 "长途通讯是山西多年来取得的另一项进步之一，军事电报局安装了一系列的军用电话，在阎锡山统治初期帮助剿灭省内土匪。这一电话网络在20世纪20年代得到了扩建，使各县之间的通信更加便捷，但在大多数情况下仍只供军队政府使用。我们应当进一步发展山西内部的电信网络和将其与全国其他地区的网络连接，以更好地联结我们，同时建设工业化所需的基础设施。当下一个进行中的类似项目是建立天气预报服务，使我们能够更好地应对恶劣天气并研究山西气候。虽然这两项投资可能不是山西农业发展的首要任务，但从长远来看，它们对于我们实现真正的现代化至关重要。"
+ SHX_connect_yanan:0 "到山西的铁路与公路"
+ SHX_connect_yanan_desc:0 "在发展农村基础设施并扩大农作物产量之后，现在至关重要的是，我们必须拥有将这些货物运往市场的运输工具。\n\n20世纪20年代时，为了应对因汽车基础设施落后而导致的饥荒救济物资发放失败，阎锡山调动军队修建了连接太原与省内各地的汽车公路网。这大大缩短了省内的交通时间，1929年的饥荒因而比十年前的饥荒要轻微得多。公路也在一定程度上拓宽了山西农民的视野，吸引了红十字会和中国国际赈灾委员会的注意。\n\n然而，尽管传统上人们认为公路能带来经济效益，但迄今为止公路却收效甚微。由于修建这些道路时的成本低、施工快，许多路都没有铺设路面，再加上阎锡山下令由地方政府维护保养，大多数道路不是被水冲毁，就是杂草丛生。因此，许多道路现在都已形同虚设，而那些有铺设路面的道路则被征收了很高的税费，以至于很少有人将其用于商业目的。事实上，骆驼和人力车比卡车更受欢迎，许多公路在山西省边界就走到了尽头，无法与中国其他地区连接。\n\n如果我们希望我们的公路和铁路线能够被用于军事之外的其他目的，那么我们就必须投资重新发展我们现有的基础设施，促进本地贸易。"
 
  SHX_QIE_ties:0 "在北京的阴影下"
  SHX_QIE_ties_desc:0 "中央政府的阴影一直在我们的头上若隐若现，观察并等待着我们犯错。然而，他们在八省联合崩溃之前对其控制的耻辱性的大败展现了他们的虚弱，而且阎锡山明智地打开了平等协商的大门。\n\n从历史上来说，尽管是以孤立和低效为代价，我们让他们的影响力维持在一个最小值的努力是非常成功的。中央政府几乎完全包围着我们，紧紧扼住我们与外界的联系。与北京更加深入的合作提供了许多让本省现代化的可能性。然而，我们必须警惕他们在我们的经济中盎然恣意。毕竟，他们对单一的经济领域的干涉并不满意，并且会尝试伸手到维持我们政府执政的其他关键支柱。\n\n不要忘记我们救国的终极目标。§R请注意我们与北京之间的互动并不是单方面的，他们手里也有大量牌可以打。§!如果我们想要砍断北京对我们的枷锁，我们必须要狡猾。\n\n[QIE.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!\n\n\n[SHX_paying_with_inf_or_pp_defined_text]"
@@ -188,6 +220,7 @@
  SHX_strengthen_feng_medium_tooltip: "§g冯玉祥§!的§Y权力§!§G中幅增长！§!"
  SHX_strengthen_feng_large_tooltip: "§g冯玉祥§!的§Y权力§!§G大幅增长！§!"
  SHX_revolution_small_tooltip: "§R激进度§!§!§G小幅增长！§!"
+ SHX_revolution_medium_tooltip: "§R激进度§!§!§G中幅增长！§!"
  SHX_increase_revolution_small_tooltip: "§R激进度§!§!§Y小幅减少！§!"
  SHX_GMJ_leaves_coalition_tooltip: "§R国民军离开了我们的联盟。§!"
  SHX_commissars_tt: "§L完成这个国策将会允许我们加强阎锡山或冯玉祥的影响力。§!"
@@ -211,6 +244,10 @@
  SHX_QIE_relief_for_shanxi_tooltip: "§C如果山西接受，他们会在从黑色星期一恢复的过程中收到援助，并且我们的影响力会有§Y中等程度§!的增长。§!"
  SHX_reform_disrupted_by_war_tooltip: "§R战火肆虐严重扰乱了我们改革的进程，大大延长了所需的时间。§!"
  SHX_Agriculture_Reform_Complete_Tooltip: "我们现在可以选取§Y“土地制度改革”§!并推进农业国策树"
+ SHX_agriculture_reform_tooltip: "§C这将会解锁更多的农业改革决议§!"
+ SHX_Depends_tooltip: "§C接下来的效果变化取决于我们的选择。§!"
+ SHX_if_favor_feng_tooltip: "假如我们支持§g冯玉祥§!的计划，我们将会获得"
+ SHX_if_favor_yan_tooltip: "假如我们支持§P阎锡山§!的计划，我们将会获得"
 
  shx.0.t:0 "晋系军阀"
  shx.0.d:0 "山西，傲然挺立之省，大禹治水之地，其历史悠久而辉煌。自古以来，这片隐于群山之中的土地接受着历朝历代的统治，如今又被置于晋系军阀的管辖之下。虽名为晋系，该军阀却仅控制着山西西部以及陕西的部分地区。德高望重、老谋深算的阎锡山统领着这片土地，自辛亥革命时起便一直担任山西督理一职。他雄心勃勃、旨在实现山西现代化的方案，为其本人赢得了“模范督理”的美称。\n\n阎锡山曾是中国北方权力纷争的参与者，通过先后支持袁世凯、段祺瑞二人，他成功在日益险恶的政治环境下稳固了统治。然而，吴佩孚与曹锟带领的直系于1928年大获胜利，本已垂死的北洋政府得以苟延残喘。张作霖撤回关外，冯玉祥则带着国民军投奔阎锡山。为对抗日益强大的直系势力，两位旧敌被迫握手言和，接受清廷复辟以换取北京承认阎锡山的老师赵戴文的督理职位。在目睹北伐与第四次直奉战争的灾难之后，山西两大铁腕人物誓要东山再起，一雪旧仇，但是山西的土地只能有一位领袖。"
@@ -272,6 +309,11 @@
  shx.agri.2.d.feng:0 "针对山西农村的贫困潦倒与分配不均终于迎来了一场彻底的变革！佃农们不堪忍受乡绅的欺压，当局反感乡绅的冥顽不化，最终让晋系高层下定决心，履行长期未能实现的土地改革承诺。回想乡绅曾经反对土改的所作所为，[SHX.Capital.GetCapitalVictoryPointName]决定完全粉碎乡绅们的统治。大量的土地被重新分配，不公平的租金也被扫地出门，枪杆子在其中可发挥了不少作用。\n\n为此农村的局势如今就像个火药桶，地主老财们带着他们的私兵向中央政府寻求支持。但广大佃农被挑起的激烈情绪可不会放过他们，农民们抓住一切机会改变自己的地位，并向地主老财们展开了报复，但他们的举动对山西的基础设施和政治平衡都做出了一定的损害。除此之外还有很多问题等待解决，晋系当局能否控制这个他们自己释放的旋涡，而这场风波又要持续多久才能结束。"
  shx.agri.2.default:0 "呃呃。很难想象你能在正常流程中看到这段文案，所以回报此问题。还有恭喜你完成土改了，大概。"
  shx.agri.2.a:0 "土地归于人民！"
+ shx.agri.3.t:0 "制定农业预算案"
+ shx.agri.3.d:0 "在我们的大部分资金已经被分配给工业的情况下，重新重视农业的花费可不算少。因此如果我们真的想要资助农业的话，我们必须得找到那么一笔钱来。虽然摆在[Root.GetLeader]和他的手下面前有多个选择，但没有一个是简单的。\n\n其一是节流，砍掉那些薄利产业，这些产业有不少是过去农业改革的遗留物。这些产业中包括可能是被经书史传影响而开办的养蚕产丝业，但因为山西寒冷干燥的环境而以失败告终；还有从澳大利亚进口美利奴羊并与耐寒的本地羊杂交生下杂种羊以产出有竞争力的本地羊种，但农民们有可能因为不想多交税，完全不怎么照顾这些羊，而缺少正规的兽医也导致大部分羊都死于牛瘟。\n\n其二是找中央多要钱。虽然这样会让我们欠北京的债，但这至少能让我们从外部获得资金而不必从省内转移。\n\n最后还有一个屡试不爽的方法，那就是加税。这必然是很不受欢迎的，甚至比砍掉农业产业还不受欢迎。"
+ shx.agri.3.a:0 "终止全部要花大钱的工程！"
+ shx.agri.3.b:0 "我们应该找中央政府要钱！"
+ shx.agri.3.c:0 "山西能挺过又一轮增税的！"
  shx.agri.4.t:0 "三师传"
  shx.agri.4.d:0 "在几十年前，有三个人投身教育行业。这三人都刚巧在辛亥革命前后就读于师范学校，却走上了不同的道路。其中最年长的一位叫连天祥，他毕业于日本农业大学。这位成功的酿酒师在杏花村经营“义泉泳”酒坊，并为自己的家乡赢得了国际殊荣。不久后，他得到了阎锡山的赏识，并成为了山西公立农业专门学校的校长。后来，连天祥又在山西农林学堂中任职，并一直担任山西的农业事务顾问。\n\n第二个人叫苏体仁，他在辛亥革命前毕业于山西省立师范学校，随后前往日本留学深造学习化学，于1916年归国并成为了一名中学校长。执掌学校期间，苏体仁的地位逐渐攀升，并与许多关心华北局势稳定的乡绅建立了紧密联系。苏体仁是由阎派知识分子组成的“智囊团”的领袖，担任了阎锡山的私人顾问并负责编辑阎锡山的公开著作。\n\n第三个人叫魏野畴，他于1917年入读北京高等师范学校，在辛亥革命的混乱余波中，魏野畴投身社会主义运动。这位社会主义运动的元老级人物现在在陕西担任中学教师。最近，他在西安领导学生和其他革命者举行反对军阀的示威运动，并在陕西的农协中担当重任。\n\n在这三人身上，各个试图争夺山西农业话语权的势力间的巨大鸿沟体现的淋漓尽致。而随着各方势力越来越关注山西的农村，人们围绕着这片土地的未来展开了激烈争论。"
  shx.agri.4.a:0 "大河依旧，昼夜奔流。"
@@ -610,8 +652,6 @@
  SHX_agriculture_reform_desc:0 "山西省最显著的特征就是其等级分明且落后的农业——这是一个困扰着决策者长达数十年之久的问题（至少对那些对此保持足够关注的人来说是这样的）。由于山西多山的地形，可供耕种的土地十分有限。大部分肥沃的土地集中在邻近河流的山谷中的冲积平原。特别是晋中的太原盆地，这里是全省权力的中心，拥有相当不受欢迎的且具有剥削性的农奴制度，使得人民和牲畜都背负着沉重的负担。即使在农奴制度不那么常见且大多数农民拥有自耕土地的地区，连年的干旱、现代科技的缺乏、落后的水利、政府的腐败以及一贯的忽视也使人民积攒了长年累月的不满，这些最终有可能转化为革命的热潮。\n\n除了人力成本之外，山西的农业在许多方面都很原始，也无法促进整体经济的繁荣。尽管山西的农业收入还不如印度和菲律宾这些地方，山西每年还是加派了大量开支以进口食物，从而加剧了其贸易赤字。超过半数（将近四分之三）的人们生活在赤贫之中，而政治舞台则由那些冷酷无情的乡绅把持。山西的农场和工厂所产生的资源很少被重新投入到经济中，它们往往被浪费在婚礼等无谓的开支上，而山西的生产力甚至越来越落后于中国的其他贫困地区。山西省政府之前为改善该地区状况所做的努力基本上都不成功，而即使是现在在实施中的“十年计划”在很大程度上也忽视了农民。当农民们在烈日下辛勤劳作时，他们的失望有可能转化为愤怒，而愤怒又有可能转化为行动。显然，我们必须采取行动——越早越好。"
  SHX_agriculture_reform1:0 "承诺土地改革"
  SHX_agriculture_reform1_desc:0 "近二十年前辛亥革命爆发之时，许多人希望农村的境况能得以转变。阎锡山与其他的革命党人掌控山西，并在振兴山西的过程中大力发展农业经济。然而，十多年过去了，山西的发展却乏善可陈。即使山西省当局承诺像投资工业一样投资农业，承诺对农民进行现代技术教育，承诺改善人民的生活条件，但人民听到的也只是空话。对普通农民来说，改革的尝试仅仅意味着更高的税收，以及士绅和国家之间在农业盈余分配问题上的进一步内讧，只有涓涓细流才会落到劳累过度、不堪重负的老百性身上。他们感到失望并不奇怪——诉讼仍然是富人压制穷人的有力工具，政府在农村事务中经常退让于士绅的要求，甚至名义上独立的农民也很容易成为放高利贷的富人的猎物。\n\n山西省领导层对该省的未来高谈阔论，但要想取得显著成绩不能光靠空谈。最初的“十年计划”在很大程度上忽视了山西农业的需求，而偏重于重工业化，但山西显然需要尽快解决农村的问题。"
- SHX_agriculture_reform1:0 "承诺土地改革"
- SHX_agriculture_reform1_desc:0 "近二十年前辛亥革命爆发之时，许多人希望农村的境况能得以转变。阎锡山与其他的革命党人掌控山西，并在振兴山西的过程中大力发展农业经济。然而，十多年过去了，山西的发展却乏善可陈。即使山西省当局承诺像投资工业一样投资农业，承诺对农民进行现代技术教育，承诺改善人民的生活条件，但人民听到的也只是空话。对普通农民来说，改革的尝试仅仅意味着更高的税收，以及士绅和国家之间在农业盈余分配问题上的进一步内讧，只有涓涓细流才会落到劳累过度、不堪重负的老百性身上。他们感到失望并不奇怪——诉讼仍然是富人压制穷人的有力工具，政府在农村事务中经常退让于士绅的要求，甚至名义上独立的农民也很容易成为放高利贷的富人的猎物。\n\n山西省领导层对该省的未来高谈阔论，但要想取得显著成绩不能光靠空谈。最初的“十年计划”在很大程度上忽视了山西农业的需求，而偏重于重工业化，但山西显然需要尽快解决农村的问题。"
  SHX_agriculture_reform_Yan:0 "徒有其名的土地改革"
  SHX_agriculture_reform_Yan_desc:0 "山西的掌权者已决定推行一项温和的土地改革方案，这囊括一系列政策，以约束农业精英的行为，同时也购买并重新分配一些土地给耕种者。这项工作并非一帆风顺，因为山西传统的士绅掮客们采取了保守的立场，他们威胁要阻挠改革的开展。许多人怀疑改革进程被社会主义者或权力欲极强的督理所劫持，他试图以牺牲他人利益为代价来扩大自己的影响力，尽管他试图向他们保证这是避免大规模骚乱的唯一途径。尤其值得注意的是所谓的“公道团”的出现，这个组织是由以前的村务监查委员会领导人组建的，目的是解决农村腐败问题，进一步落实十年规划。他们虽然诚心，但也由于山西试图在革命和反动之间保持中立而受到阻碍，不过他们也使得农村变得更加公平。"
  SHX_agriculture_reform_Feng:0 "有限土地再分配"
@@ -658,6 +698,13 @@
  SHX_Ten_Year_Plan_disrupted_desc:0 "天下没有不散的筵席，重启十年计划为我们带来了短暂易逝的繁荣。得益于孤立带来的和平，山西得以远离军阀冲突并与直系治下的中原地区开展稳定贸易。然而山西现已再次陷入战火，也许是由于统治者的野心，或是与我们自身无关的原因，但战争意味着人力被征召，资金被耗尽，基础设施被毁坏，这将不可避免地打乱所有项目。如今，十年计划只不过是对本可实现的美好未来的痛苦回忆罢了。"
  SHX_paying_off_gentry:0 "回报乡绅"
  SHX_paying_off_gentry_desc:0 "迫于压力，士绅同意放弃他们的一些要求。然而，他们开出的代价也不菲。他们要求获得相当大一部分的收成，更不用说他们还要预付硬通货，以停止他们反对近期土地改革措施的活动。为了避免进一步受到阻挠，我们必须与他们进行合作。不过，这也确实表明了地主精英们在多大程度上继续保持着对该省的控制。"
+ SHX_agriculture_budget:0 "农业预算修正案"
+ SHX_agriculture_budget_desc:0 "铺张浪费和腐败在中国并不鲜见，但是对山西这样一贫如洗的省份来说，这会招致毁灭性的后果。在推动农业改革的过程中，山西的领导层发现，进行有意义的改革往往意味着要扫除早在20世纪30年代初就已失败的改革所留下的空壳子。事实上，随着支出的不断增加和财政的持续紧张，山西对急剧增长的需求的回应是重新调整整体上的农业预算。督理向全省人民保证，新预算的来源将包括增加税收、削减无用支出和一些外部捐赠，尽管具体细节仍处于严格保密中。大多数人都会对这种回避行为睁一只眼闭一只眼，因为在山西，涉及到钱和预算时，这种行为很常见，他们更关注的是为山西是否能为受苦受难的农民提供更多的投资。"
+ SHX_fight_corruption_idea:0 "反腐败斗争"
+ SHX_fight_corruption_idea_desc:0 "令人遗憾的是，农业腐败在山西是一种司空见惯的现实。庞大的农村宗族利用其财富控制着村庄、典当行、银行和法院，当然还有主宰着土地本身的经济体系。督理成立了一系列反腐机构来打击这一现象，其中以新成立的“省政规划委员会”和“山西人民政治监督协会”为首。前者负责监督省内逾万村务监察委员会，以及定期对村庄进行审计的公道团成员，并就他们对督理改革政策的“敬业程度”作汇报。后者每周出版一份名为《监政周刊》的社论，公开揭露精英阶层成员对平民犯下的各种不公行为。这个组织的敬业程度令许多人震惊，它大胆地逮捕和谴责了数千名官员、士绅和其他传统上不受约束的精英。不过，随着调查人员继续深入调查，这也引起了人们的担忧——许多人都担心他们下一个指控的对象会是谁。"
+
+ SHX_economic_reconstruction_committee:0 "经济建设委员会"
+ SHX_economic_reconstruction_committee_desc:0 "晋系高层普遍认为晋系过去的失败是因为山西缺少完善的体制规划，因此在全省各地都成立了经济建设委员会。这些委员会由当地乡贤牵头，负责每年为自己的村庄起草并实施建设计划。随后县级建设委员会整合各个村委会的计划，接纳技术专家的意见，最后交由中央委员会制定全省的建设计划。这种自下而上的综合规划系统在理论上是一种非常现代且前卫的集中规划方式。当然细节决定成败，详细事项还需继续讨论。"
 
  SHX_Yan_Xishan_Schools:0 "在学校教授阎锡山思想"
  SHX_Discredit_Fengs_Religion:0 "发展阎锡山思想"
@@ -765,7 +812,7 @@
  SHX_fa_dong_nong_min_desc:0 "冯玉祥最出名的一项改革是创建了旨在培训农民担任村领导的农村培训学院。尽管在1927年没有取得特别的成功，但这一原则仍然有效——如果该省要发生任何变化，农民必须有权掌握自己的命运，包括政治、文化和经济事务。我们也将从农业社会主义者的手中夺回农民。"
  SHX_da_ji_xiang_cun_e_ba:0 "剪除乡绅"
  SHX_da_ji_xiang_cun_e_ba_desc:0 "“即使是受人尊敬的士绅也认为无视法律是一种时尚，而信誉较差的人更是乐此不疲！”\n\n长期以来，这个省的富人们为所欲为的现象一直被记录在案，但很少有人有勇气对抗他们。现在这一切结束了。我们必须采取积极措施使他们屈服。"
- SHX_he_shi_shen_tuo_xie:0 "和乡绅妥协"
+ SHX_he_shi_shen_tuo_xie:0 "对乡绅妥协"
  SHX_he_shi_shen_tuo_xie_desc:0 "长期以来，山西士绅一直是阎督理对山西农业领域进行意义深远的改革的阻碍，而与他们的顽固相匹配的是，他们有能力让阎督理在迎合他们的心血来潮的情况下掌握权力。让他们保持平静对于任何改革的实施都是至关重要的，我们将从向太原的学校发放享有盛誉的奖学金开始。"
  SHX_zhi_pei_xiang_cun:0 "支配乡村"
  SHX_zhi_pei_xiang_cun_desc:0 "巩固我们对农村的控制是必要的，要做到这一点，就必须遏制士绅最恶劣的过度行为。示范村委会成员应被派到每个村庄，以说服当地官员相信行政管理的必要性，并将本省利益放在首位。毫无疑问，这将是一场强行推销，但最终，让村庄服从是十年计划的必要条件。"
@@ -1068,8 +1115,6 @@
  SHX_military_science_desc:0 "我们应当深入研究军事科学，探究如何才能更好地提高山西的战斗力、打赢战争。"
  SHX_Expand_The_Taiyuan_Railway:0 "扩建正太铁路"
  SHX_Expand_The_Taiyuan_Railway_desc:0 "现在太原的铁路系统实在是太落后了，我们应该以现代标准重新翻修。"
- SHX_Connect_Yanan:0 "连接延安"
- SHX_Connect_Yanan_desc:0 "在陕西省边境的延安应该通过铁路系统与太原这样的工业和政治重镇加以连接。"
  SHX_Connect_The_Villages:0 "连接村落"
  SHX_Connect_The_Villages_desc:0 "各种村落在山西星罗棋布，应该以现代基础设施将它们连通起来。"
  SHX_Mountain_Railways:0 "山地铁路"
