modified:   common/decisions/Shanxi_decisions.txt 	modified:   common/ideas/Shanxi_ideas.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   common/scripted_effects/Shanxi_scripted_effects.txt 	modified:   events/HNN1.txt 	modified:   events/Shanxi.txt 	new file:   gfx/event_news_pictures/SHX/SHX_ren_zhigong.png 	new file:   gfx/event_news_pictures/SHX/SHX_shanxi_university.png 	modified:   gfx/leaders/GXC/Portrait_GXC_chen_jiongming_civilian.png 	modified:   gfx/leaders/GXC/portrait_GXC_chen_jiongming_army.png 	modified:   "gfx/leaders/GXC/\351\231\210\347\202\257\346\230\216-kmt.png" 	modified:   interface/SHX_event_pictures.gfx 	modified:   localisation/KR_Qing_l_simp_chinese.yml 	modified:   localisation/KR_Shandong_l_simp_chinese.yml 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -14,10 +14,10 @@
  SQI_market_liberal_party_long:0 "一心天道龙华会(Yixin Tiandao Longhua Hui)\n§g在邹平郊外建立的一心天道龙华圣教会，是那个年代能吸引一批绿林好汉的组织，它的建立者马士伟希望把几个都信仰先天道的团体集合起来共同改善山东的福利状况。只有在作为西方观察者和干涉者们对于一贯道潜在的军国主义以及皈一道的福利思想的替代品之时，它才被认为是一个政治团体。§!"
  SQI_social_conservative_party:0 "归仁会"
  SQI_social_conservative_party_long:0 "归仁会(Guiren Hui)\n§g百年以来屈辱的动荡只是山东悠久历史的一部分，许多山东人认为启蒙是摆脱屈辱的唯一途径，但另一些人在其短暂生命之中寻求主宰。杨树林的支持者反对上世纪西方所带来的一切变化，张宗昌搞得毒品交易为山东百姓所耻笑，更不必说张宗昌这人所展现的粗鄙和无耻。对很多山东百姓来说，大清之过不在于君主制，而在过度迁就张宗昌这个混蛋。因此，杨树林对大清的公开承诺得到了鲁东南地区的响应，他们希望重新回到在威海和青岛的故土。§!"
- SQI_authoritarian_democrat_party:0 "张忠昌派"
- SQI_authoritarian_democrat_party_long:0 "张忠昌派(Zhangzhongchang Pai)\n§g张忠昌所部在1925年前后进驻山东并长期割据于此，尽管他试图在第四次直奉战争中两不相帮来换取吴佩孚对其割据山东的许可。但直系要人靳云鹗的先斩后奏打破了这一切，张忠昌灰溜溜的被赶出了济南，部下也被靳云鹗收编，他不得不流亡青岛。但他从没有放弃自己的野心，在与张天然的会面后二人达成了协议，他们将为了推翻靳云鹗而合作。§!"
+ SQI_authoritarian_democrat_party:0 "张宗昌派"
+ SQI_authoritarian_democrat_party_long:0 "张宗昌派(Zhangzhongchang Pai)\n§g张宗昌所部在1925年前后进驻山东并长期割据于此，尽管他试图在第四次直奉战争中两不相帮来换取吴佩孚对其割据山东的许可。但直系要人靳云鹗的先斩后奏打破了这一切，张宗昌灰溜溜的被赶出了济南，部下也被靳云鹗收编，他不得不流亡青岛。但他从没有放弃自己的野心，在与张天然的会面后二人达成了协议，他们将为了推翻靳云鹗而合作。§!"
  SQI_paternal_autocrat_party:0 "靳云鹗派"
- SQI_paternal_autocrat_party_long:0 "靳云鹗派(Jin Yun'e Pai)\n§g1912年，靳云鹏的北洋第五师便驻扎在山东，此后他又担任了山东都督，靳云鹏、靳云鹗兄弟在山东有着广泛的影响力。在直奉倒皖战争后，靳云鹗选择投靠直系并在其中逐步攀升。但是靳云鹗始终没有得到吴佩孚的信任，这样的信任危机在第四次直奉战争后达到顶点，同为皖系投靠者的汤芗铭得以出镇湖南，而在战争中尽职尽责出力颇多的靳云鹗依旧没有固定驻地。在这样的情况下靳云鹗被吴佩孚派往山东，而随后靳云鹗便在山东发动了政变推翻了无能的张忠昌。§!"
+ SQI_paternal_autocrat_party_long:0 "靳云鹗派(Jin Yun'e Pai)\n§g1912年，靳云鹏的北洋第五师便驻扎在山东，此后他又担任了山东都督，此后直到1925年张宗昌入山东前，山东历任都督皆与皖系有着密切关系。旧皖系在山东有着广泛的影响力。在直奉倒皖战争后，靳云鹗选择投靠直系并在其中逐步攀升。但是靳云鹗始终没有得到吴佩孚的信任，这样的信任危机在第四次直奉战争后达到顶点，同为皖系投靠者的汤芗铭得以出镇湖南，而在战争中尽职尽责出力颇多的靳云鹗依旧没有固定驻地。在这样的情况下靳云鹗被吴佩孚派往山东，而随后靳云鹗便在山东发动了政变推翻了无能的张宗昌。§!"
  SQI_national_populist_party:0 "一贯道会"
  SQI_national_populist_party_long:0 "一贯道会(Yiguandao Hui)\n§g一贯道是19世纪在中华大地上蓬勃发展的白莲教支派之一，他们的信仰融合了儒家仙界的结构、佛教神灵的多样性和道教的生活方式。在世界大战时期，一贯道教义主要靠各地农村的小团体来传授，之后张天然还让大多数后来的皈依者分阶段研习教义。这确保了核心领导层有足够的筹码来调整一贯道的道义以适应他们的个人目标。现在一贯道的领头人是路中一的继任者张天然，通过其政治操纵，这个组织已经在全中国发展了七百多万名信徒，但山东本身只有五十万名成员。中国北方的各路农民军，特别是大刀会和红枪会，将一贯道视为中国最有道德的正统政府。他们向山东的缓慢迁移使得这一非暴力团体有了军事元素。需要注意的是，一贯道与其潜在的竞争对手皈一道之间仍有着较为亲密的关系。§!"
 
@@ -37,8 +37,8 @@
  SQI_chu_yupu: "褚玉璞"
  POLITICS_Chu_Yupu_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省汶上县§!\n§Y军旅生涯：§!§g褚玉璞出身破落地主之家，其父游手好闲，至于家道中落。他曾两次投考保定军校均未被录取，最终成为了横行地方的著名匪首，这样的结果并不出乎意料。\n\n褚玉璞因未能如愿步入军旅生涯而心灰意冷，遂怒而投奔绿林，纠集一众恶徒，以打家劫舍为生。相传，褚玉璞最初的匪徒班底来自一位土匪首领的队伍，有一年，他率领一批人救出了清朝官府关押在监狱的这位首领。到了1913年，褚玉璞匪帮被收编为张宗昌的麾下，自此，褚玉璞与张宗昌建起长期的良好合作关系。褚玉璞意外踏入军旅生涯，并在张宗昌的队伍里逐步晋升，他追随张宗昌投奔奉系军阀，跟随他们转战各地。后来张宗昌在山东的势力日益稳固，褚玉璞因为“功劳最大”，升任军长并主管军需。\n\n但也正因如此，在张宗昌被赶下台后，褚玉璞也同样遭到了打击，虽然新督理靳云鹗对他网开一面但是他在军中已毫无影响力§!"
  SQI_jin_yune: "靳云鹗"
- POLITIC_Jin_Yune_DESC:0 "靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。护国战争后，他投入皖系。而后又在皖系瓦解后转投直系加入吴佩孚的麾下，然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未被重用。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗终于升为师长并被派往山东，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗获得了山东督理的职务，他在山东吸纳张宗昌旧部、皖系旧部积攒着自己的势力。他不会就这么乖乖的滞留在山东。"
- POLITICS_Jin_Yune_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省§!\n§Y军旅生涯：§!§g靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。护国战争后，他投入皖系。而后又在皖系瓦解后转投直系加入吴佩孚的麾下，然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未被重用。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗终于升为师长并被派往山东，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗获得了山东督理的职务，他在山东吸纳张宗昌旧部、皖系旧部积攒着自己的势力。§!"
+ POLITIC_Jin_Yune_DESC:0 "靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。护国战争后，他投入皖系。而后又在皖系瓦解后转投直系加入吴佩孚的麾下，然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未被重用。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗升为中央十四师师长驻扎在河南，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，靳云鹗所部被派入山东，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗自行获得了山东督理的职务，他在山东吸纳张宗昌旧部、直系旧部积攒着自己的势力。他不会就这么乖乖的滞留在山东。"
+ POLITICS_Jin_Yune_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省§!\n§Y军旅生涯：§!§g靳云鹗生于一个贫苦的农民家庭，是旧皖系政要靳云鹏的弟弟。与他哥哥不同，靳云鹗的童年大多数时候是在田间干农活。\n\n为博得出人头地，靳云鹗于1898年加入袁世凯训练的新军，成了一名普通士兵，后来又被提拔成一名下级军官。随后他继续军旅生涯，并被选入保定参谋学堂速成班学习，并在毕业后成为了一名参谋官，他将来的晋升之路因此畅通无阻。护国战争后，他投入皖系。而后又在皖系瓦解后转投直系加入吴佩孚的麾下，然而，吴佩孚怀疑靳云鹗与其胞兄的关系，故而靳云鹗未被重用。靳云鹗发现，尽管他在直奉战争中战果卓著，但自己的升迁速度却比直系军阀中其他同僚都要慢，这让他心中萌生了不满。1923年，靳云鹗升为中央十四师师长驻扎在河南，这比他的其他同僚晚了足足三年，令他的不满之心日炽。\n\n但是这种糟糕的境地没有延续太久，北伐战争之后直系重新建立了对山东的控制权，靳云鹗所部被派入山东，尽管可能是有吴佩孚对靳云鹗的猜忌让他远离中央。但是至少靳云鹗自行获得了山东督理的职务，他在山东吸纳张宗昌旧部、直系旧部积攒着自己的势力。他不会就这么乖乖的滞留在山东。§!"
  POLITICS_ZHANG_TIANRAN_DESC:0 "张天然在1918年见到一贯道祖师路中一之前一直处于无欲无求的状态。路中一一直希望让她妹路中节继承一贯道，还认为路中节是观音转世。1930年路中一去世之后，一贯道内部发生分裂，路中节带着她的信徒来到河南并在此定居，而张天然则和他老婆孙素贞一起，在信徒的支持之下开始宣传一贯道的教义。1922年张天然在泰山山顶建了一座神龛，并在日后完整的控制了泰山山顶。1924年一贯道已经完全控制了泰山，张天然和他的亲信也迁居至此。同年，张天然预言溥仪有被毒死的风险，于是他决定亲自去北京一趟。到了北京之后，溥仪和张天然交谈甚欢，张天然说自己和一贯道将会从慈善和军事两方面支持朝廷。1925年第一批红枪会来到了泰山，而近年来张天然最大成就莫过于与张宗昌的合作。"
  SQI_zhang_zongchang: "张宗昌"
  POLITICS_ZHANG_ZONGCHANG_DESC:0 "当1897年德国人强租青岛之时，张宗昌并没有啥民族主义情绪，不过辛亥革命爆发之后张宗昌的确开始整起了活儿。他跑到上海见了冯国璋，并在1917年直系军阀逐渐形成之后加入了他们。1920年直皖战争那会儿张宗昌把手底下的人都撤回了山东，这使得张宗昌有资本在1926年奉系与孙中山搞谈判的时候投靠张作霖。然而在奉系指望他的时候，他又把部队拉回了山东。然而这可并没有换来吴佩孚的网开一面，他仍然被赶下了台去，靳云鹗接管了他的一切。这导致张宗昌不得不和一贯道们合作以换取自己和靳云鹗谈判的资格。"
@@ -218,10 +218,13 @@
  SQI_jiangsu_exploitation_desc:0 "根据我们与安庆的协议，八省联合内战结束后由奉天调停，而我们得到了§H[?SQI_jiangsu_exploitation_civ_factories]§!座民用工厂与§H[?SQI_jiangsu_exploitation_mil_factories]§!座军用工厂。我们还完全掌握了江苏的资源并且在济南有了更多的人力资源。"
  SQI_building_ships_faster:0 "专注船舰建设"
  SQI_building_ships_faster_desc:0 "通过把资源集中在海军上，我们可以打造一支自己的海军力量。"
+
  SQI_jiangsu_shandong_deal_dynamic_modifier:0 "开发江苏"
+
  luda_mining_company:0 "旅大矿业集团"
  seventy_two_cannon_artillery_foundry:0 "七二炮铸造厂"
  jinan_arsenal:0 "济南兵工厂"
+
  SQI_Zheyuan_beat_Zongchang:0 "屈映光上台"
  SQI_Tianran_beat_Zongchang:0 "一贯道夺权"
  SQI_Zongchang_beat_Tianran:0 "靳云鹗保住了自己的位子"
@@ -479,8 +482,9 @@
  SQI_Stealing_Sailors_From_The_Legation_Cities:0 "在使馆城市征募水兵"
  SQI_Stealing_Sailors_From_The_Legation_Cities_desc:0 "我们的舰队现在缺人，在这种情况之下，海战的胜败就取决于我们是否能在中立港招到足够的水兵，因此，为了解决这一问题，我们愿意在中国各大港口为我们的舰队征募大量的水兵。"
 
+#事件
  shandong.1.t:0 "1936年：山东的转折点"
- shandong.1.d:0 "山东省最珍贵的部分已经被使馆城市和德国人所瓜分，曾在日德手中反复易手的青岛港，现在已成为德属东亚舰队的重要基地，经济上则被东亚监事会所控制。因此，济南成了山东的权力中心，1925年张宗昌作为革命军领袖来到山东，但很快便把吃喝嫖赌当成了主业，济南的发展就如同狗肉将军一样，肮脏、粗鄙，且千疮百孔。1927年国民党北伐战争的失败，并没有使得直系将手伸入山东，而是等到1928年的又一次直奉战争，虽然那场战争张宗昌并未加入其中。但是他仍然被未得到吴佩孚许可的靳云鹗赶下台去，辗转各地。虽然此后靳云鹗也曾试图挽救山东的经济，但是与北京政府基本决裂的现状导致他们几乎得不到资金支持，也因此他只能勉强维持山东的秩序，无法更进一步。而在泰山6600个石阶之上便是一贯道的总部，领袖张天然是个神秘有神圣的人，在得到失意军阀张宗昌的支持后他一直试图颠覆靳云鹗的统治。而到了1936年，山东人已经被贫困逼到了绝境，而拯救他们的地方要么是济南，要么是泰山。"
+ shandong.1.d:0 "山东省最珍贵的部分已经被使馆城市和德国人所瓜分，曾在日德手中反复易手的青岛港，现在已成为德属东亚舰队的重要基地，经济上则被东亚监事会所控制。因此，济南成了山东的权力中心，1925年张宗昌作为革命军领袖来到山东，但很快便把吃喝嫖赌当成了主业，济南的发展就如同狗肉将军一样，肮脏、粗鄙，且千疮百孔。1927年国民党北伐战争的失败，并没有使得直系将手伸入山东，张宗昌保住了他的位置。而等到1928年的又一次直奉战争，虽然那场战争张宗昌并未加入其中。但是被派遣来监督他的靳云鹗却嗅到了机会，一场突如其来的政变将张宗昌赶出了济南，不得不逃入青岛租界避难。即便靳云鹗上台第一件事就是试图挽救山东的经济，从德国人的手中摆脱出来，但是与北京政府基本决裂的现状导致他们几乎得不到资金支持，也因此他只能勉强维持山东的秩序，无法更进一步，除非他同张宗昌一样引入日本人...\n\n而在泰山6600个石阶之上便是一贯道的总部，领袖张天然是个神秘有神圣的人，在得到失意军阀张宗昌的支持后他一直试图颠覆靳云鹗的统治。而到了1936年，山东人已经被贫困逼到了绝境，能够拯救他们的地方要么是济南，要么是泰山。"
  shandong.1.a:0 "爷不管，火车晚点了"
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
